--- a/lists/法广.md
+++ b/lists/法广.md
@@ -1,6 +1,8 @@
 法广
 ------
 
+6-27 [特朗普高调办造势活动 法新社称是展开复仇之旅](/articles/rfi/1027276.md)
+
 6-27 [苹果日报：传港府允复刊条件是交出员工个人资料](/articles/rfi/1027277.md)
 
 6-27 [以色列外长访罗马 将会美国务卿布林肯 – 法国国际广播电台 - RFI](/articles/rfi/1027278.md)
@@ -598,6 +600,4 @@
 6-23 [北爱民主联盟党任命唐纳森为新党魁 – 法国国际广播电台 - RFI](/articles/rfi/1027574.md)
 
 6-23 [【视频】:教科文提议将大堡礁列为濒临危险世界自然遗产](/articles/rfi/1027575.md)
-
-6-23 [【视频】:也门让人着迷的地狱之井](/articles/rfi/1027576.md)
 
