--- a/lists/德国之声.md
+++ b/lists/德国之声.md
@@ -1,6 +1,8 @@
 德国之声
 ------
 
+6-27 [媒体： 特斯拉拟在中国发起召回行动](/articles/dw/1041709.md)
+
 6-27 [“战狼外交”与“讲好中国故事”](/articles/dw/1041710.md)
 
 6-27 [澳中关系：民众对中国看法恶化 学者呼吁学习新加坡](/articles/dw/1041711.md)
@@ -598,6 +600,4 @@
 6-10 [德语媒体：中国的崛起之路不会畅通无阻](/articles/dw/1042007.md)
 
 6-10 [慕尼黑安全会议主席：中国已秀出肌肉，欧盟应拿出应对策略](/articles/dw/1042008.md)
-
-6-10 [德国取消接种优先排序   疫苗短缺拖后腿](/articles/dw/1042009.md)
 
