--- a/lists/法广.md
+++ b/lists/法广.md
@@ -1,6 +1,16 @@
 法广
 ------
 
+6-27 [美国豪宅讯息或称刘长乐以760万美元抛售洛杉矶豪宅](/articles/rfi/1027271.md)
+
+6-27 [美国东奥田径选拔 110米跨栏世界冠军哈洛威出线 – 法国国际广播电台 - RFI](/articles/rfi/1027272.md)
+
+6-27 [德尔塔变种病毒导致新一轮闭关封城 - 法国报纸摘要](/articles/rfi/1027273.md)
+
+6-27 [东盟媒体工作者面临危机和挑战 - 曼谷专栏](/articles/rfi/1027274.md)
+
+6-27 [牙买加跳远之王盖尔 取得东京奥运资格 – 法国国际广播电台 - RFI](/articles/rfi/1027275.md)
+
 6-27 [特朗普高调办造势活动 法新社称是展开复仇之旅](/articles/rfi/1027276.md)
 
 6-27 [苹果日报：传港府允复刊条件是交出员工个人资料](/articles/rfi/1027277.md)
@@ -590,14 +600,4 @@
 6-23 [等待联准会主席国会证词  欧股小涨作收 – 法国国际广播电台 - RFI](/articles/rfi/1027569.md)
 
 6-23 [【视频】选择逃亡的香港年轻人（下）](/articles/rfi/1027570.md)
-
-6-23 [超负荷工作 东京都知事小池住院了](/articles/rfi/1027571.md)
-
-6-23 [中国断供稀土 西方怎么办？](/articles/rfi/1027572.md)
-
-6-23 [酗酒肝病患者染疫 死亡风险高出8成 – 法国国际广播电台 - RFI](/articles/rfi/1027573.md)
-
-6-23 [北爱民主联盟党任命唐纳森为新党魁 – 法国国际广播电台 - RFI](/articles/rfi/1027574.md)
-
-6-23 [【视频】:教科文提议将大堡礁列为濒临危险世界自然遗产](/articles/rfi/1027575.md)
 
