--- a/lists/美国之音.md
+++ b/lists/美国之音.md
@@ -1,6 +1,8 @@
 美国之音
 ------
 
+6-28 [英国防机密文件在公车站被路人捡拾 当局调查遗失事件](/articles/voa/1039861.md)
+
 6-28 [中国新增一个疫苗亿万富翁](/articles/voa/1039862.md)
 
 6-27 [“港版国安法”政治肃杀迫使泛民新民主同盟解散](/articles/voa/1039863.md)
@@ -598,6 +600,4 @@
 6-14 [以色列宣誓成立新政府，内塔尼亚胡下台](/articles/voa/1040159.md)
 
 6-14 [拜登：“中国必须开始在国际人权准则和透明度方面采取更负责任的行动。”](/articles/voa/1040160.md)
-
-6-14 [七国集团以‘重建更好世界’接招中国 ‘一带一路’](/articles/voa/1040161.md)
 
