--- a/lists/法广.md
+++ b/lists/法广.md
@@ -1,6 +1,8 @@
 法广
 ------
 
+6-28 [美国前总统特朗普打响中期选举竞选战 - 要闻解说](/articles/rfi/1027259.md)
+
 6-28 [美以外长会谈 以外长指对伊朗核协议严重保留](/articles/rfi/1027260.md)
 
 6-28 [前《苹果日报》英文版执行总编辑冯伟光机场被捕](/articles/rfi/1027261.md)
@@ -598,6 +600,4 @@
 6-23 [美股续强 那斯达克指数创新高 – 法国国际广播电台 - RFI](/articles/rfi/1027557.md)
 
 6-23 [美股续涨 激励日股开高 – 法国国际广播电台 - RFI](/articles/rfi/1027558.md)
-
-6-23 [华尔街日报编辑委员会发文称赞黎智英代表所有为新闻自由奋斗的人发声](/articles/rfi/1027559.md)
 
