--- a/lists/美国之音.md
+++ b/lists/美国之音.md
@@ -1,6 +1,10 @@
 美国之音
 ------
 
+6-28 [美国对在伊拉克和叙利亚的伊朗支持的武装分子发动空袭](/articles/voa/1039857.md)
+
+6-28 [布林肯与以色列外长会谈 以色列反对重谈伊朗核协议](/articles/voa/1039858.md)
+
 6-28 [专家：关闭被指控违反国家安全法的苹果日报将影响香港媒体](/articles/voa/1039859.md)
 
 6-28 [中国成“世界顶级网络威胁” 美中网络空间战开启](/articles/voa/1039860.md)
@@ -596,8 +600,4 @@
 6-14 [学生抗议院校合并遭暴力对待 合并转设凸显教育结构不平衡](/articles/voa/1040155.md)
 
 6-14 [美国与阿尔巴尼亚签署备忘录 要为不使用中国5G设备树立榜样](/articles/voa/1040156.md)
-
-6-14 [七国集团峰会公报首次直接提台湾 台北：得到支持不冒进](/articles/voa/1040157.md)
-
-6-14 [加拿大总理：七国集团领导人同意“更加密切地”协调应对中国提出的挑战。](/articles/voa/1040158.md)
 
