--- a/lists/德国之声.md
+++ b/lists/德国之声.md
@@ -1,6 +1,8 @@
 德国之声
 ------
 
+6-28 [《苹果》前主笔被捕 立场新闻下架评论文章](/articles/dw/1041705.md)
+
 6-27 [疫苗接种启动半年 欧洲各国喜忧参半](/articles/dw/1041706.md)
 
 6-27 [墙外文摘：报摊没了“苹果”，内心有了恐惧](/articles/dw/1041707.md)
@@ -598,6 +600,4 @@
 6-10 [DW事实核查：中国靠贷款敲诈非洲？](/articles/dw/1042003.md)
 
 6-10 [媒体：美国拒绝了欧方峰会草案](/articles/dw/1042004.md)
-
-6-10 [教授遭举报违国安法  香港还有学术自由吗？](/articles/dw/1042005.md)
 
