--- a/lists/法广.md
+++ b/lists/法广.md
@@ -1,6 +1,12 @@
 法广
 ------
 
+6-28 [美国防部要员分析印太地区军备现状及目标（二） - 印太纵览](/articles/rfi/1027244.md)
+
+6-28 [伊朗将领自夸  拥有无人机可飞7千公里 – 法国国际广播电台 - RFI](/articles/rfi/1027245.md)
+
+6-28 [AZ与牛津大学展开改良疫苗试验 – 法国国际广播电台 - RFI](/articles/rfi/1027246.md)
+
 6-28 [《苹果日报》停刊 英文版执行总编辑再被捕 - 要闻分析](/articles/rfi/1027247.md)
 
 6-28 [瓦莱丽·佩克雷斯赢得法兰西岛大区选举](/articles/rfi/1027248.md)
@@ -594,10 +600,4 @@
 6-23 [向科技巨擘垄断行为开铡 美议员踏出第一步 – 法国国际广播电台 - RFI](/articles/rfi/1027542.md)
 
 6-23 [美国呼吁终结阿富汗暴力 认真协商 – 法国国际广播电台 - RFI](/articles/rfi/1027543.md)
-
-6-23 [日本东京股市收低 – 法国国际广播电台 - RFI](/articles/rfi/1027544.md)
-
-6-23 [确诊病例增  以色列总理警告恐爆新一波疫情 – 法国国际广播电台 - RFI](/articles/rfi/1027545.md)
-
-6-23 [是否成立小组调查国会大厦暴动 裴洛西本周决定 – 法国国际广播电台 - RFI](/articles/rfi/1027546.md)
 
