--- a/lists/美国之音.md
+++ b/lists/美国之音.md
@@ -1,6 +1,8 @@
 美国之音
 ------
 
+6-28 [巴基斯坦内政部长承认阿富汗塔利班的家人住在巴基斯坦](/articles/voa/1039856.md)
+
 6-28 [美国对在伊拉克和叙利亚的伊朗支持的武装分子发动空袭](/articles/voa/1039857.md)
 
 6-28 [布林肯与以色列外长会谈 以色列反对重谈伊朗核协议](/articles/voa/1039858.md)
@@ -598,6 +600,4 @@
 6-14 [昂山素季庭审开始 预计将持续到七月底](/articles/voa/1040154.md)
 
 6-14 [学生抗议院校合并遭暴力对待 合并转设凸显教育结构不平衡](/articles/voa/1040155.md)
-
-6-14 [美国与阿尔巴尼亚签署备忘录 要为不使用中国5G设备树立榜样](/articles/voa/1040156.md)
 
