--- a/lists/纽约时报.md
+++ b/lists/纽约时报.md
@@ -1,6 +1,10 @@
 纽约时报
 ------
 
+6-28 [简报：中国再掀“红色旅游”热；布林肯称美法对中国崛起风险达成共识](/articles/nyt/1046675.md)
+
+6-28 [中共建党百年纪念前夕，“红色旅游”热潮再起](/articles/nyt/1046676.md)
+
 6-25 [“小甜甜”布兰妮法庭指控父亲，称被下药、强迫工作](/articles/nyt/1046677.md)
 
 6-25 [迈阿密公寓楼倒塌：99人失踪，楼体原准备维修](/articles/nyt/1046678.md)
@@ -596,8 +600,4 @@
 4-13 [简报：蚂蚁集团宣布整改；NBA会遭遇新疆棉困境吗？](/articles/nyt/1046973.md)
 
 4-12 [缅甸政变与强人统治回归：东南亚陷入“民主疲劳”了吗](/articles/nyt/1046974.md)
-
-4-12 [现代君主制的奇迹，现代婚姻的奇迹](/articles/nyt/1046975.md)
-
-4-12 [打上马赛克的运动鞋：西方品牌因新疆棉遭中国综艺审查](/articles/nyt/1046976.md)
 
