--- a/lists/法广.md
+++ b/lists/法广.md
@@ -1,6 +1,10 @@
 法广
 ------
 
+6-28 [NBA东区冠军赛第3战 公鹿击败老鹰 – 法国国际广播电台 - RFI](/articles/rfi/1027242.md)
+
+6-28 [密道顿字母哥合拿71分 公鹿客场击败老鹰 – 法国国际广播电台 - RFI](/articles/rfi/1027243.md)
+
 6-28 [美国防部要员分析印太地区军备现状及目标（二） - 印太纵览](/articles/rfi/1027244.md)
 
 6-28 [伊朗将领自夸  拥有无人机可飞7千公里 – 法国国际广播电台 - RFI](/articles/rfi/1027245.md)
@@ -596,8 +600,4 @@
 6-23 [首宗国安法案今开审 不设陪审团 唐英杰否认控罪](/articles/rfi/1027540.md)
 
 6-23 [角力：44国联署批国安法令香港自由恶化 吁勿干涉港疆藏事务国家减至65国](/articles/rfi/1027541.md)
-
-6-23 [向科技巨擘垄断行为开铡 美议员踏出第一步 – 法国国际广播电台 - RFI](/articles/rfi/1027542.md)
-
-6-23 [美国呼吁终结阿富汗暴力 认真协商 – 法国国际广播电台 - RFI](/articles/rfi/1027543.md)
 
