--- a/lists/中国数字时代.md
+++ b/lists/中国数字时代.md
@@ -27,6 +27,8 @@
 
 6-26 [与此同时 | 冒犯的艺术，几种同谋](/articles/cdt/381043.md)
 
+6-28 [【中国哭墙】大家替您过完了人生百态，可是还想留你回来（6月22-6月28日，2021年）](/articles/cdt/381046.md)
+
 6-25 [燃读｜崔卫平：被禁锢的头脑](/articles/cdt/381055.md)
 
 6-26 [【CDT周报】第二十三期：“举世众目睽睽之下，谁敢贸然对香港胡作非为？”](/articles/cdt/381066.md)
@@ -598,6 +600,4 @@
 5-21 [端传媒 | 被寄养的女孩：七年，三个家庭，谁是我的亲生父母？（节选）](/articles/cdt/382337.md)
 
 5-21 [肖美丽 | 5月21日，弦子没有开庭](/articles/cdt/382338.md)
-
-5-21 [德国之声 | 长平观察：中国“屌丝”的“内卷”与“躺平“](/articles/cdt/382340.md)
 
