--- a/lists/法广.md
+++ b/lists/法广.md
@@ -1,6 +1,8 @@
 法广
 ------
 
+6-28 [孟加拉达卡疑瓦斯管线爆炸 至少7死50伤 – 法国国际广播电台 - RFI](/articles/rfi/1027241.md)
+
 6-28 [NBA东区冠军赛第3战 公鹿击败老鹰 – 法国国际广播电台 - RFI](/articles/rfi/1027242.md)
 
 6-28 [密道顿字母哥合拿71分 公鹿客场击败老鹰 – 法国国际广播电台 - RFI](/articles/rfi/1027243.md)
@@ -598,6 +600,4 @@
 6-23 [欧股开盘小涨 – 法国国际广播电台 - RFI](/articles/rfi/1027539.md)
 
 6-23 [首宗国安法案今开审 不设陪审团 唐英杰否认控罪](/articles/rfi/1027540.md)
-
-6-23 [角力：44国联署批国安法令香港自由恶化 吁勿干涉港疆藏事务国家减至65国](/articles/rfi/1027541.md)
 
