--- a/lists/中国数字时代.md
+++ b/lists/中国数字时代.md
@@ -3,6 +3,8 @@
 
 5-6 [Photo: Untitled (Shanghai), by Hsiuan Boyen](/articles/cdt/0.md)
 
+6-28 [【麻辣总局】逻辑的边界](/articles/cdt/380964.md)
+
 6-27 [纽约时报 | 香港的新闻自由是如何被一步步侵蚀的（摘要）](/articles/cdt/381004.md)
 
 6-27 [William | 维权事宜与境外势力](/articles/cdt/381006.md)
@@ -598,6 +600,4 @@
 5-21 [德国之声 | 王靖渝迪拜转机时被捕 恐遭遣返回中国](/articles/cdt/382335.md)
 
 5-21 [端传媒 | 被寄养的女孩：七年，三个家庭，谁是我的亲生父母？（节选）](/articles/cdt/382337.md)
-
-5-21 [肖美丽 | 5月21日，弦子没有开庭](/articles/cdt/382338.md)
 
