--- a/lists/路透.md
+++ b/lists/路透.md
@@ -1,6 +1,10 @@
 路透
 ------
 
+6-28 [瑞银CEO认为Archegos的打击是一次性的 并淡化裁员--报导](/articles/reuters/1036408.md)
+
+6-28 [中国之江生物称其新冠核酸检测试剂可有效检出印度和南非等变异病毒](/articles/reuters/1036409.md)
+
 6-28 [焦点：美国页岩油企无意增产 冷眼看待油价跳涨](/articles/reuters/1036410.md)
 
 6-28 [分析：与世界隔绝 澳洲国内经济一片红火](/articles/reuters/1036411.md)
@@ -596,8 +600,4 @@
 6-19 [独家：美国明尼亚波利斯联储总裁希望维持近零利率至少到2023年底](/articles/reuters/1036706.md)
 
 6-19 [欧洲央行料在明年3月如期结束PEPP 且不会扩大常规资产购买计划--调查](/articles/reuters/1036707.md)
-
-6-19 [独家：行业专家告诉OPEC美国今年石油产量增长有限--消息人士](/articles/reuters/1036708.md)
-
-6-19 [独家：中国购买至少八艘美国大豆船货 为四个半月来最大一笔--交易商](/articles/reuters/1036709.md)
 
