--- a/lists/德国之声.md
+++ b/lists/德国之声.md
@@ -1,6 +1,8 @@
 德国之声
 ------
 
+6-28 [台湾疫苗危机暂解 特权施打引民怨](/articles/dw/1041702.md)
+
 6-28 [印度向中国边境增兵 专家：持续谈判中的战略考量](/articles/dw/1041703.md)
 
 6-28 [中共百年前夕 北京不容有失](/articles/dw/1041704.md)
@@ -598,6 +600,4 @@
 6-10 [中国通过《反外国制裁法》反制美欧“长臂管辖”](/articles/dw/1042000.md)
 
 6-10 [慕尼黑安全指数出炉：如何看待“中国威胁”](/articles/dw/1042001.md)
-
-6-10 [大赦国际：中国对新疆少数民族实施系统性暴力](/articles/dw/1042002.md)
 
