--- a/lists/中国数字时代.md
+++ b/lists/中国数字时代.md
@@ -3,6 +3,8 @@
 
 5-6 [Photo: Untitled (Shanghai), by Hsiuan Boyen](/articles/cdt/0.md)
 
+6-28 [循迹晓讲｜凶徒遍地：明末社会中的戾气是如何培育出来的？](/articles/cdt/380961.md)
+
 6-28 [【麻辣总局】逻辑的边界](/articles/cdt/380964.md)
 
 6-27 [纽约时报 | 香港的新闻自由是如何被一步步侵蚀的（摘要）](/articles/cdt/381004.md)
@@ -10,6 +12,8 @@
 6-27 [William | 维权事宜与境外势力](/articles/cdt/381006.md)
 
 6-27 [VOA | 中共党庆前重大事故防不胜防，河南武术馆火灾酿18死](/articles/cdt/381009.md)
+
+6-28 [【CDT敏感词周报】第三十期：新闻自由、伊力哈木、祝党长命百岁](/articles/cdt/381012.md)
 
 6-27 [【旧闻重温】暖壶人 | 不要在回民家里吃猪肉 vs 打破宗教禁锢追求美食自由](/articles/cdt/381018.md)
 
@@ -596,8 +600,4 @@
 5-22 [【立此存照】周迅：文艺志愿者“学党史，传精神，跟党走”](/articles/cdt/382331.md)
 
 5-21 [立场新闻 | 守住香港的荣休主教陈日君：我不会走、不可走、不应走](/articles/cdt/382333.md)
-
-5-21 [德国之声 | 王靖渝迪拜转机时被捕 恐遭遣返回中国](/articles/cdt/382335.md)
-
-5-21 [端传媒 | 被寄养的女孩：七年，三个家庭，谁是我的亲生父母？（节选）](/articles/cdt/382337.md)
 
