--- a/lists/美国之音.md
+++ b/lists/美国之音.md
@@ -1,6 +1,8 @@
 美国之音
 ------
 
+6-28 [苹果日报停刊当局仍不罢休 再有一名前资深记者疑被逮捕](/articles/voa/1039854.md)
+
 6-28 [被指破坏社区和环境 中国巨型水电站“安全准点”发电](/articles/voa/1039855.md)
 
 6-28 [巴基斯坦内政部长承认阿富汗塔利班的家人住在巴基斯坦](/articles/voa/1039856.md)
@@ -598,6 +600,4 @@
 6-15 [六月流放事件80周年，波罗的海三国呼吁不让历史重演](/articles/voa/1040152.md)
 
 6-14 [广东核电厂气体外泄恐酿灾，法国合资方向美求援](/articles/voa/1040153.md)
-
-6-14 [昂山素季庭审开始 预计将持续到七月底](/articles/voa/1040154.md)
 
