--- a/lists/德国之声.md
+++ b/lists/德国之声.md
@@ -1,6 +1,8 @@
 德国之声
 ------
 
+6-28 [全球第二大水电站白鹤滩正式投产发电](/articles/dw/1041700.md)
+
 6-28 [中共建党纪念日为什么是七月一日？](/articles/dw/1041701.md)
 
 6-28 [台湾疫苗危机暂解 特权施打引民怨](/articles/dw/1041702.md)
@@ -598,6 +600,4 @@
 6-11 [G7承诺捐十亿疫苗  美英各送五亿及一亿剂](/articles/dw/1041998.md)
 
 6-11 [台美贸易代表会晤 确认数周内展开贸易对谈](/articles/dw/1041999.md)
-
-6-10 [中国通过《反外国制裁法》反制美欧“长臂管辖”](/articles/dw/1042000.md)
 
