--- a/lists/纽约时报.md
+++ b/lists/纽约时报.md
@@ -1,6 +1,8 @@
 纽约时报
 ------
 
+6-28 [越过红线：习近平为何决心“全面管治”香港](/articles/nyt/1046671.md)
+
 6-28 [科学家发现新古代人类物种“龙人”](/articles/nyt/1046672.md)
 
 6-28 [台湾疫苗僵局谁之过：当公共卫生采购变成政治问题](/articles/nyt/1046673.md)
@@ -598,6 +600,4 @@
 4-13 [台湾原住民狩猎文化：在千年传统与现代法律之间](/articles/nyt/1046969.md)
 
 4-13 [奥运会还应该继续存在吗？](/articles/nyt/1046970.md)
-
-4-13 [中国加强管控互联网巨头，蚂蚁集团宣布彻底整改](/articles/nyt/1046971.md)
 
