--- a/lists/德国之声.md
+++ b/lists/德国之声.md
@@ -1,6 +1,8 @@
 德国之声
 ------
 
+6-28 [为信仰？为认同？——想加入中国共产党的台湾人](/articles/dw/1041699.md)
+
 6-28 [全球第二大水电站白鹤滩正式投产发电](/articles/dw/1041700.md)
 
 6-28 [中共建党纪念日为什么是七月一日？](/articles/dw/1041701.md)
@@ -598,6 +600,4 @@
 6-11 [匈牙利总理让步 愿以公投解决复旦校区争议](/articles/dw/1041997.md)
 
 6-11 [G7承诺捐十亿疫苗  美英各送五亿及一亿剂](/articles/dw/1041998.md)
-
-6-11 [台美贸易代表会晤 确认数周内展开贸易对谈](/articles/dw/1041999.md)
 
