--- a/lists/美国之音.md
+++ b/lists/美国之音.md
@@ -1,6 +1,10 @@
 美国之音
 ------
 
+6-28 [香港社民连七一游行申请遭警方拒绝，将提出申诉](/articles/voa/1039851.md)
+
+6-28 [美国务卿拜会教宗 并与盟国讨论击败伊斯兰国对策](/articles/voa/1039852.md)
+
 6-28 [企业社会公正时代来临 消费者期望品牌发声](/articles/voa/1039853.md)
 
 6-28 [苹果日报停刊当局仍不罢休 再有一名前资深记者疑被逮捕](/articles/voa/1039854.md)
@@ -596,8 +600,4 @@
 6-15 [报告：中国核武库继续增长并进一步现代化](/articles/voa/1040149.md)
 
 6-15 [对抗中国军事野心 北约首次指北京构成“系统性挑战”](/articles/voa/1040150.md)
-
-6-15 [国际科学家促调查科学期刊在有关新冠病毒溯源理论上所起的作用](/articles/voa/1040151.md)
-
-6-15 [六月流放事件80周年，波罗的海三国呼吁不让历史重演](/articles/voa/1040152.md)
 
