--- a/lists/自由亚洲电台.md
+++ b/lists/自由亚洲电台.md
@@ -1,6 +1,12 @@
 自由亚洲电台
 ------
 
+6-28 [港版国安红线模煳不清  评论员纷纷离港或封口](/articles/rfa/1045210.md)
+
+6-28 [苹果倒下之后  网媒收恐吓讯息　下架文章应对威胁](/articles/rfa/1045211.md)
+
+6-28 [广州建健康驿站代替隔离酒店    显示当局准备疫情长期存在](/articles/rfa/1045212.md)
+
 6-28 [任正非：华为要防止“内卷” 不能不认美国是老师](/articles/rfa/1045213.md)
 
 6-28 [香港《立场新闻》清场 张洁平： 继续做新闻的风险控制](/articles/rfa/1045214.md)
@@ -594,10 +600,4 @@
 5-25 [王靖渝案最新进展 三大疑问盘点](/articles/rfa/1045508.md)
 
 5-25 [美国情报为“病毒实验室泄漏说”添砖加瓦](/articles/rfa/1045509.md)
-
-5-25 [芝大中国学联批罗冠聪“恐怖分子”，罗回应：爱国流氓](/articles/rfa/1045510.md)
-
-5-25 [残运会冠军越野赛中罹难  再引舆论对残障人保障的关注](/articles/rfa/1045511.md)
-
-5-25 [袁隆平究竟是何时看到饿殍的？中国新华网的说法自相矛盾](/articles/rfa/1045512.md)
 
