--- a/lists/法广.md
+++ b/lists/法广.md
@@ -1,6 +1,18 @@
 法广
 ------
 
+6-28 [马克龙宣布中国远景集团在法建电池厂 投资20亿欧元](/articles/rfi/1027205.md)
+
+6-28 [法国地方选举 极右派和执政党皆挫败 – 法国国际广播电台 - RFI](/articles/rfi/1027206.md)
+
+6-28 [王毅29日视频出席G20外长会议](/articles/rfi/1027207.md)
+
+6-28 [为纪念南海仲裁案菲律宾参议员提议设立“西菲律宾海胜利日”](/articles/rfi/1027208.md)
+
+6-28 [Delta变异株流行 欧盟疫苗通行证效力恐降低 – 法国国际广播电台 - RFI](/articles/rfi/1027209.md)
+
+6-28 [两选手密切接触确诊者遭退赛 温网大会：非意料之外的事 – 法国国际广播电台 - RFI](/articles/rfi/1027210.md)
+
 6-28 [圣彼得堡疫情严峻 仍将如期举行欧国杯8强赛 – 法国国际广播电台 - RFI](/articles/rfi/1027211.md)
 
 6-28 [从毛泽东到习近平 中国庆祝中共建党百年 - 要闻解说](/articles/rfi/1027212.md)
@@ -588,16 +600,4 @@
 6-24 [港澳对台关系同时降温是否北京的统一部署？](/articles/rfi/1027503.md)
 
 6-24 [美国：共和党在参议院阻扰选举改革](/articles/rfi/1027504.md)
-
-6-24 [伊核协议：伊朗官员称美国已同意取消石油和航运制裁](/articles/rfi/1027505.md)
-
-6-24 [西班牙特赦 9名加泰隆尼亚分离主义分子获释 – 法国国际广播电台 - RFI](/articles/rfi/1027506.md)
-
-6-24 [美国务院官员：布林肯与王毅未计划下周在G20会谈](/articles/rfi/1027507.md)
-
-6-24 [德国举办第二次利比亚问题国际会议](/articles/rfi/1027508.md)
-
-6-24 [《苹果日报》结业 英国和欧盟关注发声](/articles/rfi/1027509.md)
-
-6-24 [岸信夫：中国的国防开支缺乏透明度](/articles/rfi/1027510.md)
 
