--- a/lists/美国之音.md
+++ b/lists/美国之音.md
@@ -1,6 +1,8 @@
 美国之音
 ------
 
+6-28 [香港以疫情为由从7月1日起禁止英国航班入境](/articles/voa/1039849.md)
+
 6-28 [中共百年党庆临近 北京草木皆兵如临大敌？](/articles/voa/1039850.md)
 
 6-28 [香港社民连七一游行申请遭警方拒绝，将提出申诉](/articles/voa/1039851.md)
@@ -598,6 +600,4 @@
 6-15 [特鲁多在G7上强调：民主国家必须共同应对中国挑战](/articles/voa/1040147.md)
 
 6-15 [讥讽七国集团峰会漫画或伤及习近平“可爱”中国形象](/articles/voa/1040148.md)
-
-6-15 [报告：中国核武库继续增长并进一步现代化](/articles/voa/1040149.md)
 
