--- a/lists/法广.md
+++ b/lists/法广.md
@@ -1,6 +1,10 @@
 法广
 ------
 
+6-28 [【视频】:美国楼房倒塌居民沉浸在哀悼中 搜索工作仍在继续](/articles/rfi/1027203.md)
+
+6-28 [义大利人出门不用再戴口罩 全国都列疫情低风险区 – 法国国际广播电台 - RFI](/articles/rfi/1027204.md)
+
 6-28 [马克龙宣布中国远景集团在法建电池厂 投资20亿欧元](/articles/rfi/1027205.md)
 
 6-28 [法国地方选举 极右派和执政党皆挫败 – 法国国际广播电台 - RFI](/articles/rfi/1027206.md)
@@ -596,8 +600,4 @@
 6-24 [印度面对1新突变病毒极忧 8月底或为欧盟90%新增感染例](/articles/rfi/1027501.md)
 
 6-24 [香港国安法实施后首宗诉讼被告24岁](/articles/rfi/1027502.md)
-
-6-24 [港澳对台关系同时降温是否北京的统一部署？](/articles/rfi/1027503.md)
-
-6-24 [美国：共和党在参议院阻扰选举改革](/articles/rfi/1027504.md)
 
