--- a/lists/自由亚洲电台.md
+++ b/lists/自由亚洲电台.md
@@ -1,6 +1,8 @@
 自由亚洲电台
 ------
 
+6-29 [维吾尔人： “不该在大学生遭血腥镇压的北京举行冬奥”](/articles/rfa/1045209.md)
+
 6-28 [港版国安红线模煳不清  评论员纷纷离港或封口](/articles/rfa/1045210.md)
 
 6-28 [苹果倒下之后  网媒收恐吓讯息　下架文章应对威胁](/articles/rfa/1045211.md)
@@ -598,6 +600,4 @@
 5-25 [电瓶车阜新市政府门口爆炸6死伤   民间认定并非普通意外](/articles/rfa/1045507.md)
 
 5-25 [王靖渝案最新进展 三大疑问盘点](/articles/rfa/1045508.md)
-
-5-25 [美国情报为“病毒实验室泄漏说”添砖加瓦](/articles/rfa/1045509.md)
 
