--- a/lists/德国之声.md
+++ b/lists/德国之声.md
@@ -1,6 +1,8 @@
 德国之声
 ------
 
+6-28 [欧足联：没有不让荷兰球迷带彩虹旗到匈牙利观赛](/articles/dw/1041690.md)
+
 6-28 [热浪滚滚，美加气温创下历史记录](/articles/dw/1041691.md)
 
 6-28 [“黑色暴雨”笼罩香港](/articles/dw/1041692.md)
@@ -598,6 +600,4 @@
 6-11 [武汉纪录片柏林电影节获奖](/articles/dw/1041988.md)
 
 6-11 [德语媒体：以魅力攻势取代战狼外交?](/articles/dw/1041989.md)
-
-6-11 [疫情让护士们疲于奔命，“她”会是救星？](/articles/dw/1041990.md)
 
