--- a/lists/美国之音.md
+++ b/lists/美国之音.md
@@ -1,6 +1,12 @@
 美国之音
 ------
 
+6-29 [印尼六月至少十位接种过科兴疫苗的医生死于新冠感染 中国疫苗有效性再受质疑](/articles/voa/1039845.md)
+
+6-29 [随着疫苗陆续抵达，台湾单日本土新冠病例减至三级警戒以来新低](/articles/voa/1039846.md)
+
+6-29 [朝鲜官媒称金正恩暴瘦让民众伤心落泪](/articles/voa/1039847.md)
+
 6-28 [缅甸军政府对昂山素季指控的庭审聆讯周一继续](/articles/voa/1039848.md)
 
 6-28 [香港以疫情为由从7月1日起禁止英国航班入境](/articles/voa/1039849.md)
@@ -594,10 +600,4 @@
 6-15 [VOA独家:美中央司令部司令说美军在阿富汗的空袭将只聚焦防止对美国和盟友本土的恐怖袭击](/articles/voa/1040143.md)
 
 6-15 [中国在西太平洋迅速扩张，五角大楼和国防专家密集讨论新战略](/articles/voa/1040144.md)
-
-6-15 [时事大家谈: 北京两度出面灭火，民族主义殃及自身？](/articles/voa/1040145.md)
-
-6-15 [中国湖北十堰燃气爆炸案 死亡人数增至25](/articles/voa/1040146.md)
-
-6-15 [特鲁多在G7上强调：民主国家必须共同应对中国挑战](/articles/voa/1040147.md)
 
