--- a/lists/美国之音.md
+++ b/lists/美国之音.md
@@ -1,6 +1,8 @@
 美国之音
 ------
 
+6-29 [时事大家谈: “别让他跑了！” 潘石屹能平安撤离吗？](/articles/voa/1039844.md)
+
 6-29 [印尼六月至少十位接种过科兴疫苗的医生死于新冠感染 中国疫苗有效性再受质疑](/articles/voa/1039845.md)
 
 6-29 [随着疫苗陆续抵达，台湾单日本土新冠病例减至三级警戒以来新低](/articles/voa/1039846.md)
@@ -598,6 +600,4 @@
 6-15 [澳大利亚将派护卫舰加入英国航母舰队在印太地区的海军演习](/articles/voa/1040142.md)
 
 6-15 [VOA独家:美中央司令部司令说美军在阿富汗的空袭将只聚焦防止对美国和盟友本土的恐怖袭击](/articles/voa/1040143.md)
-
-6-15 [中国在西太平洋迅速扩张，五角大楼和国防专家密集讨论新战略](/articles/voa/1040144.md)
 
