--- a/lists/美国之音.md
+++ b/lists/美国之音.md
@@ -1,6 +1,8 @@
 美国之音
 ------
 
+6-29 [印度向中印边境增兵5万，中国吁印度降低紧张情势](/articles/voa/1039843.md)
+
 6-29 [时事大家谈: “别让他跑了！” 潘石屹能平安撤离吗？](/articles/voa/1039844.md)
 
 6-29 [印尼六月至少十位接种过科兴疫苗的医生死于新冠感染 中国疫苗有效性再受质疑](/articles/voa/1039845.md)
@@ -598,6 +600,4 @@
 6-15 [北约重申联盟实力，抨击俄罗斯和中国](/articles/voa/1040141.md)
 
 6-15 [澳大利亚将派护卫舰加入英国航母舰队在印太地区的海军演习](/articles/voa/1040142.md)
-
-6-15 [VOA独家:美中央司令部司令说美军在阿富汗的空袭将只聚焦防止对美国和盟友本土的恐怖袭击](/articles/voa/1040143.md)
 
