--- a/lists/中国数字时代.md
+++ b/lists/中国数字时代.md
@@ -3,6 +3,10 @@
 
 5-6 [Photo: Untitled (Shanghai), by Hsiuan Boyen](/articles/cdt/0.md)
 
+6-29 [立场新闻 | Winandmac撤出香港、《852邮报》下架影片  记协：白色恐怖笼罩新闻业界](/articles/cdt/380942.md)
+
+6-29 [自由亚洲 | 河南商丘武术馆大火十八人遇难  死者家属求真相反遭监控](/articles/cdt/380946.md)
+
 6-28 [中国文字狱事件盘点｜中国裁判文书网删文动作时间线](/articles/cdt/380954.md)
 
 6-28 [【网络民议】“不少群众反映，电价跟不上生活水平提高”](/articles/cdt/380956.md)
@@ -596,8 +600,4 @@
 5-22 [【立此存照】这些人因为攻击袁隆平被拘押、封号](/articles/cdt/382316.md)
 
 5-22 [知识分子 | 饶毅：55年前，袁隆平发表论文的意义](/articles/cdt/382317.md)
-
-5-22 [黄章晋 | 袁隆平神话：杂交水稻之父是怎样升起的？](/articles/cdt/382320.md)
-
-5-22 [阜成门六号院 | “文革”新贵的奢靡腐化生活：文革真的没有腐败吗？](/articles/cdt/382322.md)
 
