--- a/lists/美国之音.md
+++ b/lists/美国之音.md
@@ -1,6 +1,10 @@
 美国之音
 ------
 
+6-29 [默克尔继续主张应与普京举行峰会](/articles/voa/1039841.md)
+
+6-29 [美最高法院拒绝重新考虑跨性别者浴室使用案](/articles/voa/1039842.md)
+
 6-29 [印度向中印边境增兵5万，中国吁印度降低紧张情势](/articles/voa/1039843.md)
 
 6-29 [时事大家谈: “别让他跑了！” 潘石屹能平安撤离吗？](/articles/voa/1039844.md)
@@ -596,8 +600,4 @@
 6-15 [分析：拜登领导七国集团回击中国挑战初获成功](/articles/voa/1040139.md)
 
 6-15 [美国最高法院就哈佛招生纠纷上诉案征求拜登政府意见](/articles/voa/1040140.md)
-
-6-15 [北约重申联盟实力，抨击俄罗斯和中国](/articles/voa/1040141.md)
-
-6-15 [澳大利亚将派护卫舰加入英国航母舰队在印太地区的海军演习](/articles/voa/1040142.md)
 
