--- a/lists/美国之音.md
+++ b/lists/美国之音.md
@@ -1,6 +1,10 @@
 美国之音
 ------
 
+6-29 [联合国报告呼吁瓦解全球针对非裔的系统性种族主义](/articles/voa/1039839.md)
+
+6-29 [美台本周恢复贸易会谈 白宫重申对台湾的支持“坚如磐石“](/articles/voa/1039840.md)
+
 6-29 [默克尔继续主张应与普京举行峰会](/articles/voa/1039841.md)
 
 6-29 [美最高法院拒绝重新考虑跨性别者浴室使用案](/articles/voa/1039842.md)
@@ -596,8 +600,4 @@
 6-15 [活动人士称赞英国“人民法庭”就中国涉嫌虐待维吾尔人采取行动](/articles/voa/1040137.md)
 
 6-15 [面对中国的海上压力，菲律宾再次暂停取消有关美国驻军的协议](/articles/voa/1040138.md)
-
-6-15 [分析：拜登领导七国集团回击中国挑战初获成功](/articles/voa/1040139.md)
-
-6-15 [美国最高法院就哈佛招生纠纷上诉案征求拜登政府意见](/articles/voa/1040140.md)
 
