--- a/lists/中国数字时代.md
+++ b/lists/中国数字时代.md
@@ -5,6 +5,8 @@
 
 6-29 [立场新闻 | Winandmac撤出香港、《852邮报》下架影片  记协：白色恐怖笼罩新闻业界](/articles/cdt/380942.md)
 
+6-29 [【网络民议】我国人均国民收入超1万美元，正向共同富裕的目标扎实迈进](/articles/cdt/380943.md)
+
 6-29 [自由亚洲 | 河南商丘武术馆大火十八人遇难  死者家属求真相反遭监控](/articles/cdt/380946.md)
 
 6-28 [中国文字狱事件盘点｜中国裁判文书网删文动作时间线](/articles/cdt/380954.md)
@@ -598,6 +600,4 @@
 5-22 [美国之音 | 习近平插队的梁家河变微博敏感词](/articles/cdt/382315.md)
 
 5-22 [【立此存照】这些人因为攻击袁隆平被拘押、封号](/articles/cdt/382316.md)
-
-5-22 [知识分子 | 饶毅：55年前，袁隆平发表论文的意义](/articles/cdt/382317.md)
 
