--- a/lists/中国数字时代.md
+++ b/lists/中国数字时代.md
@@ -3,9 +3,11 @@
 
 5-6 [Photo: Untitled (Shanghai), by Hsiuan Boyen](/articles/cdt/0.md)
 
+6-29 [【CDT推荐】本周推荐媒体](/articles/cdt/380938.md)
+
 6-29 [立场新闻 | Winandmac撤出香港、《852邮报》下架影片  记协：白色恐怖笼罩新闻业界](/articles/cdt/380942.md)
 
-6-29 [【网络民议】我国人均国民收入超1万美元，正向共同富裕的目标扎实迈进](/articles/cdt/380943.md)
+6-29 [【网络民议】原来我们只有在统计平均数值的时候是有钱人](/articles/cdt/380943.md)
 
 6-29 [自由亚洲 | 河南商丘武术馆大火十八人遇难  死者家属求真相反遭监控](/articles/cdt/380946.md)
 
@@ -598,6 +600,4 @@
 5-22 [念念回声 | 女权主义者梁小门：他们指出的所有“罪状”，每一条我都很自豪](/articles/cdt/382313.md)
 
 5-22 [美国之音 | 习近平插队的梁家河变微博敏感词](/articles/cdt/382315.md)
-
-5-22 [【立此存照】这些人因为攻击袁隆平被拘押、封号](/articles/cdt/382316.md)
 
