--- a/lists/美国之音.md
+++ b/lists/美国之音.md
@@ -1,6 +1,14 @@
 美国之音
 ------
 
+6-29 [美以总统会晤被伊朗问题蒙上一层阴影](/articles/voa/1039832.md)
+
+6-29 [美军在叙利亚遭到火箭袭击后展开还击](/articles/voa/1039833.md)
+
+6-29 [普京与习近平视频会晤 俄中延长合作条约](/articles/voa/1039834.md)
+
+6-29 [寻找“新时代的斯诺“唱赞歌，苦于斯人无处寻](/articles/voa/1039835.md)
+
 6-29 [如何应对中国经济胁迫？专家提议建立“贸易北约”](/articles/voa/1039836.md)
 
 6-29 [美国科学家恢复被删病毒序列 有望促进新冠溯源](/articles/voa/1039837.md)
@@ -592,12 +600,4 @@
 6-15 [里根号航母战斗群进入南中国海履行例行任务](/articles/voa/1040130.md)
 
 6-15 [里根号航母战斗群进入南海履行例行任务](/articles/voa/1040131.md)
-
-6-15 [上海合作组织20年：矛盾关系犬牙交错 形式尚存步履维艰](/articles/voa/1040132.md)
-
-6-15 [香港美国商会会长：国安法界限模糊 人才流失已开始](/articles/voa/1040133.md)
-
-6-15 [美国司法部“中国行动计划”核心人物德默斯即将卸任](/articles/voa/1040134.md)
-
-6-15 [北约认定中国构成“系统性挑战”，分析人士说各成员国如何应对分歧仍在](/articles/voa/1040135.md)
 
