--- a/lists/路透.md
+++ b/lists/路透.md
@@ -1,6 +1,14 @@
 路透
 ------
 
+6-29 [谷歌下架两份自定义地图文件 因当中包含反泰国国王人士个人资料](/articles/reuters/1036358.md)
+
+6-29 [加拿大碳排放量最高的小型老旧油砂项目为何持续开采？](/articles/reuters/1036359.md)
+
+6-29 [中国房企受“三道红线”监管要求纷纷降杠杆 但整体改善情况有限--标普信评](/articles/reuters/1036360.md)
+
+6-29 [IMF总裁提议任命中国央行副行长李波出任副总裁 接替将于8月卸任的张涛](/articles/reuters/1036361.md)
+
 6-29 [对Delta变种病毒的担忧令亚股承压 关注美国数据](/articles/reuters/1036362.md)
 
 6-29 [分析师观点：中国货币政策稳字当头仍是最优解 更关注“大局”及外部风险](/articles/reuters/1036363.md)
@@ -592,12 +600,4 @@
 6-22 [中国原油期权挂牌上市 引入境外交易者](/articles/reuters/1036656.md)
 
 6-22 [比特币进一步暴跌 因中国加大打击虚拟货币挖矿和交易行为](/articles/reuters/1036657.md)
-
-6-22 [美股大涨 道指录得逾三个月最大单日涨幅](/articles/reuters/1036658.md)
-
-6-22 [美元从两个月高位回落 中国加大力度打击挖矿拖累比特币急挫](/articles/reuters/1036659.md)
-
-6-22 [油价急升 受助于美元下跌和伊朗供应不确定性](/articles/reuters/1036660.md)
-
-6-22 [金价收复部分失地 因美元涨势暂停扶助黄金恢复吸引力](/articles/reuters/1036661.md)
 
