--- a/lists/德国之声.md
+++ b/lists/德国之声.md
@@ -1,6 +1,8 @@
 德国之声
 ------
 
+6-29 [国安法一年：五港人一移民  各国推「救生艇」供落脚](/articles/dw/1041686.md)
+
 6-29 [中共党庆主打抗疫有成 哪些历史被遗忘了?](/articles/dw/1041687.md)
 
 6-29 [杰拉多：“另一个不眠之夜”](/articles/dw/1041688.md)
@@ -598,6 +600,4 @@
 6-11 [美国通胀破五 美联储压力增大](/articles/dw/1041984.md)
 
 6-11 [“曲线救国”：一带一路盯上汉堡“福地”](/articles/dw/1041985.md)
-
-6-11 [香港收紧电影审查 违反国安法不宜上映](/articles/dw/1041986.md)
 
