--- a/lists/纽约时报.md
+++ b/lists/纽约时报.md
@@ -1,6 +1,8 @@
 纽约时报
 ------
 
+6-29 [迈阿密公寓倒塌事故为何会发生？](/articles/nyt/1046668.md)
+
 6-29 [简报：习近平为何决心“全面管治”香港；“七一”临近北京安保升级](/articles/nyt/1046669.md)
 
 6-29 [霞浦，中国的网红“打卡”点和摆拍“圣地”](/articles/nyt/1046670.md)
@@ -598,6 +600,4 @@
 4-14 [美情报报告：中国对美国构成最大威胁](/articles/nyt/1046966.md)
 
 4-14 [香港拟将鼓励选民投空白票或抵制选举定为非法](/articles/nyt/1046967.md)
-
-4-14 [简报：美国报告称中国为头号威胁；中国责令科技公司自查](/articles/nyt/1046968.md)
 
