--- a/lists/路透.md
+++ b/lists/路透.md
@@ -1,6 +1,8 @@
 路透
 ------
 
+6-29 [美国希望与俄罗斯有更稳定及有利的关系--美国国务卿布林肯](/articles/reuters/1036355.md)
+
 6-29 [美联储卡什卡利称银行业不能每次危机都指望政府出手相救--金融时报](/articles/reuters/1036356.md)
 
 6-29 [墨西哥向美国发函 要求就通用汽车违反劳权指控采取补救措施](/articles/reuters/1036357.md)
@@ -598,6 +600,4 @@
 6-22 [比特币投资产品和基金连续第六周出现资金外流--CoinShares](/articles/reuters/1036653.md)
 
 6-22 [《苹果日报》及其网络版将于周三停止运营 因大部分员工已辞职--香港媒体](/articles/reuters/1036654.md)
-
-6-22 [焦点：美国商务部称将撤销TikTok和WeChat相关禁令](/articles/reuters/1036655.md)
 
