--- a/lists/中国数字时代.md
+++ b/lists/中国数字时代.md
@@ -3,6 +3,8 @@
 
 5-6 [Photo: Untitled (Shanghai), by Hsiuan Boyen](/articles/cdt/0.md)
 
+6-29 [【立此存照】微博时评博主 @凯雷 嘲讽英国无盛世太平：伦敦大火 VS 北京烟火](/articles/cdt/380933.md)
+
 6-29 [【CDT推荐】本周推荐媒体](/articles/cdt/380938.md)
 
 6-29 [立场新闻 | Winandmac撤出香港、《852邮报》下架影片  记协：白色恐怖笼罩新闻业界](/articles/cdt/380942.md)
@@ -598,6 +600,4 @@
 5-22 [苹果日报 | 个人崇拜疑搞过头　紧急降温 北京下令撤习近平画像](/articles/cdt/382311.md)
 
 5-22 [念念回声 | 女权主义者梁小门：他们指出的所有“罪状”，每一条我都很自豪](/articles/cdt/382313.md)
-
-5-22 [美国之音 | 习近平插队的梁家河变微博敏感词](/articles/cdt/382315.md)
 
