--- a/lists/美国之音.md
+++ b/lists/美国之音.md
@@ -1,6 +1,8 @@
 美国之音
 ------
 
+6-29 [中共党史掩盖和歪曲的重大历史事件 (5) 长征不是北上抗日而是末路逃窜](/articles/voa/1039829.md)
+
 6-29 [日本副防卫相：对中国侵占台湾的企图“我们一定要觉醒”](/articles/voa/1039830.md)
 
 6-29 [教宗“友好气氛中”会见布林肯 曾因中国宗教问题拒见蓬佩奥](/articles/voa/1039831.md)
@@ -598,6 +600,4 @@
 6-16 [中共党史掩盖和歪曲的重大历史事件(3): “保家卫国”？联合国认定中国是韩战的“侵略者”](/articles/voa/1040127.md)
 
 6-15 [美欧实现飞机业贸易纠纷休战 缓解关系迈出重大一步](/articles/voa/1040128.md)
-
-6-15 [台湾新确诊新冠病例持续走低 连续三天低于200例](/articles/voa/1040129.md)
 
