--- a/lists/路透.md
+++ b/lists/路透.md
@@ -1,6 +1,10 @@
 路透
 ------
 
+6-29 [中国发改委：国企混改要选对引好战略投资者 真正发挥“战略”作用](/articles/reuters/1036348.md)
+
+6-29 [住友金属预期2021年全球电池用镍的需求将增长18%](/articles/reuters/1036349.md)
+
 6-29 [雷军退任天星银行董事会主席 专注小米集团业务发展及新产品开发](/articles/reuters/1036350.md)
 
 6-29 [中国股市收跌1%左右 Delta新冠变种病毒威胁到全球经济复苏](/articles/reuters/1036351.md)
@@ -596,8 +600,4 @@
 6-22 [中国就业门户网站前程无忧已达成协议 一财团以57亿美元对其私有化](/articles/reuters/1036646.md)
 
 6-22 [欧元区和美国在通胀前景方面“显然处境不同”--欧洲央行总裁](/articles/reuters/1036647.md)
-
-6-22 [中国原则上同意重新安排刚果共和国24亿美元债务的偿还--刚果财长](/articles/reuters/1036648.md)
-
-6-22 [特斯拉将在“约一个月后”举办人工智能日招聘活动--马斯克](/articles/reuters/1036649.md)
 
