--- a/lists/中国数字时代.md
+++ b/lists/中国数字时代.md
@@ -3,6 +3,12 @@
 
 5-6 [Photo: Untitled (Shanghai), by Hsiuan Boyen](/articles/cdt/0.md)
 
+6-29 [小晖原创｜昨天，五大权威媒体集体翻车了](/articles/cdt/380920.md)
+
+6-29 [【异闻观止】界面新闻｜中纪委：十八大以来已查处408.9万人，374.2万人受处分](/articles/cdt/380922.md)
+
+6-29 [Danielle｜写在新疆旅行之后](/articles/cdt/380924.md)
+
 6-29 [【立此存照】微博时评博主 @凯雷 嘲讽英国无盛世太平：伦敦大火 VS 北京烟火](/articles/cdt/380933.md)
 
 6-29 [【CDT推荐】本周推荐媒体](/articles/cdt/380938.md)
@@ -594,10 +600,4 @@
 5-23 [Kita | 生日快乐：记维吾尔学者热依拉·达吾提教授](/articles/cdt/382299.md)
 
 5-23 [【404文库】上海长宁｜奇迹在这里发生：坐轮椅老奶奶听着红歌居然站了起来](/articles/cdt/382303.md)
-
-5-23 [Alfred | 港人流亡日记：赶着回家的孩子](/articles/cdt/382310.md)
-
-5-22 [苹果日报 | 个人崇拜疑搞过头　紧急降温 北京下令撤习近平画像](/articles/cdt/382311.md)
-
-5-22 [念念回声 | 女权主义者梁小门：他们指出的所有“罪状”，每一条我都很自豪](/articles/cdt/382313.md)
 
