--- a/lists/中国数字时代.md
+++ b/lists/中国数字时代.md
@@ -3,6 +3,8 @@
 
 5-6 [Photo: Untitled (Shanghai), by Hsiuan Boyen](/articles/cdt/0.md)
 
+6-29 [挪威TALK｜打倒罗翔你们以为就会赢吗？](/articles/cdt/380919.md)
+
 6-29 [小晖原创｜昨天，五大权威媒体集体翻车了](/articles/cdt/380920.md)
 
 6-29 [【异闻观止】界面新闻｜中纪委：十八大以来已查处408.9万人，374.2万人受处分](/articles/cdt/380922.md)
@@ -598,6 +600,4 @@
 5-23 [流落南方 | 黄河石林百公里越野赛到底发生了什么](/articles/cdt/382296.md)
 
 5-23 [Kita | 生日快乐：记维吾尔学者热依拉·达吾提教授](/articles/cdt/382299.md)
-
-5-23 [【404文库】上海长宁｜奇迹在这里发生：坐轮椅老奶奶听着红歌居然站了起来](/articles/cdt/382303.md)
 
