--- a/lists/自由亚洲电台.md
+++ b/lists/自由亚洲电台.md
@@ -1,6 +1,8 @@
 自由亚洲电台
 ------
 
+6-29 [全中国《唱支山歌给党听》？ 藏人：拿人民的钱为党镀金洗白](/articles/rfa/1045199.md)
+
 6-29 [香港少年犯被逼接受洗脑教育    学者形容是 “再教育营”翻版](/articles/rfa/1045200.md)
 
 6-29 [成都秋雨教会1家6口逃亡滞台2年 获美政治庇护](/articles/rfa/1045201.md)
@@ -598,6 +600,4 @@
 5-26 [白俄罗斯劫机事件：欧美谴责制裁 中国为其站台](/articles/rfa/1045497.md)
 
 5-26 [中共号召全民学党政历史  目的何在？](/articles/rfa/1045498.md)
-
-5-26 [中共持续宗教迫害  教宗呼吁为中国信徒祷告](/articles/rfa/1045499.md)
 
