--- a/lists/自由亚洲电台.md
+++ b/lists/自由亚洲电台.md
@@ -1,6 +1,8 @@
 自由亚洲电台
 ------
 
+6-29 [习近平与普京视频会晤  中俄向西方展示合作](/articles/rfa/1045198.md)
+
 6-29 [全中国《唱支山歌给党听》？ 藏人：拿人民的钱为党镀金洗白](/articles/rfa/1045199.md)
 
 6-29 [香港少年犯被逼接受洗脑教育    学者形容是 “再教育营”翻版](/articles/rfa/1045200.md)
@@ -598,6 +600,4 @@
 5-26 [如今的国际友人是些什么人？](/articles/rfa/1045496.md)
 
 5-26 [白俄罗斯劫机事件：欧美谴责制裁 中国为其站台](/articles/rfa/1045497.md)
-
-5-26 [中共号召全民学党政历史  目的何在？](/articles/rfa/1045498.md)
 
