--- a/lists/自由亚洲电台.md
+++ b/lists/自由亚洲电台.md
@@ -1,6 +1,8 @@
 自由亚洲电台
 ------
 
+6-30 [意大利外长 :意美关系较意中关係更加重要](/articles/rfa/1045196.md)
+
 6-30 [颁“七一勋章”习近平重提“我将无我”  他是抄袭李登辉？](/articles/rfa/1045197.md)
 
 6-29 [习近平与普京视频会晤  中俄向西方展示合作](/articles/rfa/1045198.md)
@@ -598,6 +600,4 @@
 5-26 [网传《中国好声音》等综艺节目的海选被叫停](/articles/rfa/1045494.md)
 
 5-26 [中国官媒讽“碳排放不少”       环保少女批“肥胖羞辱”](/articles/rfa/1045495.md)
-
-5-26 [如今的国际友人是些什么人？](/articles/rfa/1045496.md)
 
