--- a/lists/美国之音.md
+++ b/lists/美国之音.md
@@ -1,6 +1,8 @@
 美国之音
 ------
 
+6-30 [澳大利亚中国留学生：出国也跳不出中共的监控](/articles/voa/1039820.md)
+
 6-30 [中俄续约：再向西方发出抱团信号 普京重视北京无领土要求](/articles/voa/1039821.md)
 
 6-30 [苹果日报前主笔冯伟光遭警逮捕后交保获释](/articles/voa/1039822.md)
@@ -598,6 +600,4 @@
 6-16 [文件显示特朗普曾向司法部施压以扭转选举失利局面](/articles/voa/1040118.md)
 
 6-16 [“为掌权不惜代价” 中共百年后何以成为世界秩序的最大威胁？](/articles/voa/1040119.md)
-
-6-16 [研究显示新冠病毒2019年12月中旬便在美国出现](/articles/voa/1040120.md)
 
