--- a/lists/中国数字时代.md
+++ b/lists/中国数字时代.md
@@ -3,6 +3,8 @@
 
 5-6 [Photo: Untitled (Shanghai), by Hsiuan Boyen](/articles/cdt/0.md)
 
+6-30 [中产生活观察 | 浪漫骑士的终结](/articles/cdt/380912.md)
+
 6-30 [【404文库】好好表达 | 一个农民工父亲的求助信，他写得如同诗歌，为他刚跳楼的17岁儿子](/articles/cdt/380915.md)
 
 6-29 [挪威TALK｜打倒罗翔你们以为就会赢吗？](/articles/cdt/380919.md)
@@ -598,6 +600,4 @@
 5-24 [维舟 | “境外势力”的幻影](/articles/cdt/382291.md)
 
 5-23 [四角之地 | 转载CGTN报道的媒体有错吗？](/articles/cdt/382294.md)
-
-5-23 [流落南方 | 黄河石林百公里越野赛到底发生了什么](/articles/cdt/382296.md)
 
