--- a/lists/美国之音.md
+++ b/lists/美国之音.md
@@ -1,6 +1,10 @@
 美国之音
 ------
 
+6-30 [北京对海外维吾尔人的迫害骚扰已遍及全球](/articles/voa/1039811.md)
+
+6-30 [驻阿富汗美军指挥官对阿富汗的安全局势表示担忧](/articles/voa/1039812.md)
+
 6-30 [佛罗里达大楼倒塌现场搜救工作进入第六天](/articles/voa/1039813.md)
 
 6-30 [众议院外委会共和党人反对民主党主导的抗衡中国法案版本](/articles/voa/1039814.md)
@@ -596,8 +600,4 @@
 6-16 [拜登政府宣布计划，接纳更多的中美洲未成年人](/articles/voa/1040109.md)
 
 6-16 [贝索斯前妻麦肯锡·斯科特向“资金不足并被忽视”的事业捐款27亿美元](/articles/voa/1040110.md)
-
-6-16 [VOA连线(张蓉湘): 锁定中国、俄罗斯 美国外交政策本周欧洲登场](/articles/voa/1040111.md)
-
-6-16 [美国新冠死亡人数超过60万](/articles/voa/1040112.md)
 
