--- a/lists/自由亚洲电台.md
+++ b/lists/自由亚洲电台.md
@@ -1,6 +1,8 @@
 自由亚洲电台
 ------
 
+6-30 [智库建议：对华关系恢复正常的前提是香港恢复自由](/articles/rfa/1045192.md)
+
 6-30 [中国欲打造农村“三位一体”   计划经济回潮？](/articles/rfa/1045193.md)
 
 6-30 [从油菜籽到龙虾  中国持续用经贸威胁加拿大](/articles/rfa/1045194.md)
@@ -598,6 +600,4 @@
 5-26 [港媒报“爆眼少女”造假    刻意丑化抗争者形象](/articles/rfa/1045490.md)
 
 5-26 [深圳港区新增3例无症状病例  冷链物流在首批接种疫苗之列](/articles/rfa/1045491.md)
-
-5-26 [舆论围剿下被迫就范？ 特斯拉在中国设立数据中心](/articles/rfa/1045492.md)
 
