--- a/lists/美国之音.md
+++ b/lists/美国之音.md
@@ -1,6 +1,10 @@
 美国之音
 ------
 
+6-30 [中国全面封杀之下比特币是否前景堪忧？](/articles/voa/1039809.md)
+
+6-30 [拜登：宽带普及努力仿佛20世纪初的农村电气化](/articles/voa/1039810.md)
+
 6-30 [北京对海外维吾尔人的迫害骚扰已遍及全球](/articles/voa/1039811.md)
 
 6-30 [驻阿富汗美军指挥官对阿富汗的安全局势表示担忧](/articles/voa/1039812.md)
@@ -596,8 +600,4 @@
 6-16 [六点问答：中国台山核电站到底怎么了？](/articles/voa/1040107.md)
 
 6-16 [英法领导人支持澳大利亚反抗中国的经济胁迫](/articles/voa/1040108.md)
-
-6-16 [拜登政府宣布计划，接纳更多的中美洲未成年人](/articles/voa/1040109.md)
-
-6-16 [贝索斯前妻麦肯锡·斯科特向“资金不足并被忽视”的事业捐款27亿美元](/articles/voa/1040110.md)
 
