--- a/lists/美国之音.md
+++ b/lists/美国之音.md
@@ -1,6 +1,10 @@
 美国之音
 ------
 
+6-30 [联合国就明年维和经费达成一致](/articles/voa/1039807.md)
+
+6-30 [美最高法院裁决：某些移民无权获得保释听证](/articles/voa/1039808.md)
+
 6-30 [中国全面封杀之下比特币是否前景堪忧？](/articles/voa/1039809.md)
 
 6-30 [拜登：宽带普及努力仿佛20世纪初的农村电气化](/articles/voa/1039810.md)
@@ -596,8 +600,4 @@
 6-16 [美军中东指挥官：应在中国出现的所有地方应对其挑战](/articles/voa/1040105.md)
 
 6-16 [视北京为最大战略威胁 美亚太助卿人选承诺全面深化对台关系](/articles/voa/1040106.md)
-
-6-16 [六点问答：中国台山核电站到底怎么了？](/articles/voa/1040107.md)
-
-6-16 [英法领导人支持澳大利亚反抗中国的经济胁迫](/articles/voa/1040108.md)
 
