--- a/lists/金融时报.md
+++ b/lists/金融时报.md
@@ -1,6 +1,16 @@
 金融时报
 ------
 
+6-30 [“中国同学”百年变革启示录](/articles/ft/1045409.md)
+
+6-30 [金正恩内危外困的六个原因](/articles/ft/1045410.md)
+
+6-30 [从小培养“通才”而非“专才”：从世界名校的改革趋势说起](/articles/ft/1045411.md)
+
+6-30 [策展思维：城市空间经营的新阶段](/articles/ft/1045412.md)
+
+6-30 [NFT的版权制度：成功的营销手段还是科技未完待续？](/articles/ft/1045413.md)
+
 6-29 [白宫为空袭叙伊边境亲伊朗民兵组织辩护](/articles/ft/1045414.md)
 
 6-29 [美元下一步](/articles/ft/1045415.md)
@@ -590,14 +600,4 @@
 4-25 [拜登税改背后的新经济学思想](/articles/ft/1045707.md)
 
 4-25 [拜登将亚美尼亚大屠杀称为“种族灭绝”](/articles/ft/1045708.md)
-
-4-25 [特斯拉事件的另一种可能](/articles/ft/1045709.md)
-
-4-23 [从几个案例看英国外交向印太地区的倾斜](/articles/ft/1045710.md)
-
-4-23 [竺可桢入党记](/articles/ft/1045711.md)
-
-4-23 [每周时事分析：中国在独立姿态下维系与美国关系的有限稳定](/articles/ft/1045712.md)
-
-4-23 [俄罗斯从俄乌边界撤离军队](/articles/ft/1045713.md)
 
