--- a/lists/德国之声.md
+++ b/lists/德国之声.md
@@ -1,6 +1,8 @@
 德国之声
 ------
 
+6-30 [香港民主之父李柱铭：教女眼中是何种样貌](/articles/dw/1041662.md)
+
 6-30 [联合国维和预算过关  中国从中作梗?](/articles/dw/1041663.md)
 
 6-30 [G20外长关注新冠疫苗 中国批假多边真口号](/articles/dw/1041664.md)
@@ -598,6 +600,4 @@
 6-13 [谈完中国谈气候 西方七国要撒钱](/articles/dw/1041960.md)
 
 6-13 [新冠疫情中的教训：减小对中国的过度依赖](/articles/dw/1041961.md)
-
-6-13 [陈时中承认复星医药手握BNT疫苗代理权](/articles/dw/1041962.md)
 
