--- a/lists/美国之音.md
+++ b/lists/美国之音.md
@@ -1,6 +1,8 @@
 美国之音
 ------
 
+6-30 [金正恩：新冠疫情一次严重事件威胁到国家的防疫努力](/articles/voa/1039802.md)
+
 6-30 [北京强推国安法一周年 美国学者忧香港法治加速沉沦](/articles/voa/1039803.md)
 
 6-30 [北京力推新疆宣传视频 人权组织涉疆视频却遭下架](/articles/voa/1039804.md)
@@ -598,6 +600,4 @@
 6-16 [澳大利亚联邦高等法院裁决反外国干预法未违宪](/articles/voa/1040100.md)
 
 6-16 [美俄两国领袖周三在日内瓦举行会谈](/articles/voa/1040101.md)
-
-6-16 [东盟防长会议聚焦南中国海 中国对周边国家既打又拉](/articles/voa/1040102.md)
 
