--- a/lists/法广.md
+++ b/lists/法广.md
@@ -1,6 +1,12 @@
 法广
 ------
 
+6-30 [俄罗斯货运飞船升空 将抵国际太空站 – 法国国际广播电台 - RFI](/articles/rfi/1027093.md)
+
+6-30 [世卫宣布中国根除疟疾 境外输入风险犹存](/articles/rfi/1027094.md)
+
+6-30 [阿富汗撤军：德国已完成，美国接近尾声 内战担忧加剧](/articles/rfi/1027095.md)
+
 6-30 [美国报业就业人数持续下跌 数位订户逆势成长 – 法国国际广播电台 - RFI](/articles/rfi/1027096.md)
 
 6-30 [投资人等待美国就业数据 日股收低 – 法国国际广播电台 - RFI](/articles/rfi/1027097.md)
@@ -594,10 +600,4 @@
 6-25 [美官员指美台关系根本改变 赵立坚斥是错误言论](/articles/rfi/1027391.md)
 
 6-25 [日本人口减少 降至世界第11](/articles/rfi/1027392.md)
-
-6-25 [日本将向太平洋岛国等提供1100万剂新冠疫苗 称7月再赠台湾疫苗](/articles/rfi/1027393.md)
-
-6-25 [『视频』匈牙利性少数人群法案引争议，但欧盟27国未有共识](/articles/rfi/1027394.md)
-
-6-25 [队史首次  小熊4投手接力缔造无安打比赛 – 法国国际广播电台 - RFI](/articles/rfi/1027395.md)
 
