--- a/lists/自由亚洲电台.md
+++ b/lists/自由亚洲电台.md
@@ -1,6 +1,10 @@
 自由亚洲电台
 ------
 
+6-30 [中共对台操作疫情认知战 分化台湾也做大内宣](/articles/rfa/1045190.md)
+
+6-30 [百年党庆草木皆兵    局部断网禁天然气及菜刀](/articles/rfa/1045191.md)
+
 6-30 [智库建议：对华关系恢复正常的前提是香港恢复自由](/articles/rfa/1045192.md)
 
 6-30 [中国欲打造农村“三位一体”   计划经济回潮？](/articles/rfa/1045193.md)
@@ -596,8 +600,4 @@
 5-27 [抵制北京奥运  加拿大多个组织发起请愿签名活动](/articles/rfa/1045488.md)
 
 5-26 [台湾急需疫苗  美国不急北京热心 学者吁习近平先打安民心](/articles/rfa/1045489.md)
-
-5-26 [港媒报“爆眼少女”造假    刻意丑化抗争者形象](/articles/rfa/1045490.md)
-
-5-26 [深圳港区新增3例无症状病例  冷链物流在首批接种疫苗之列](/articles/rfa/1045491.md)
 
