--- a/lists/中国数字时代.md
+++ b/lists/中国数字时代.md
@@ -3,6 +3,8 @@
 
 5-6 [Photo: Untitled (Shanghai), by Hsiuan Boyen](/articles/cdt/0.md)
 
+6-30 [【图说天朝】这几天的各大网站首页是这样](/articles/cdt/380898.md)
+
 6-30 [知识分子｜公鼠怀孕实验引发伦理争议，论文作者称已申请撤稿](/articles/cdt/380900.md)
 
 6-30 [【异闻观止】新华网 | 中国新型政党制度启迪世界](/articles/cdt/380910.md)
@@ -598,6 +600,4 @@
 5-24 [【CDT周报】第十八期：“为波兰的罪过感到羞耻的人，才是真正的波兰人”](/articles/cdt/382278.md)
 
 5-24 [【CDT敏感词周报】第二十五期：袁隆平、长宁老奶奶](/articles/cdt/382286.md)
-
-5-24 [【网络民议】一位甘肃景泰马拉松遇难者家属的微博评论区](/articles/cdt/382289.md)
 
