--- a/lists/纽约时报.md
+++ b/lists/纽约时报.md
@@ -1,6 +1,8 @@
 纽约时报
 ------
 
+6-30 [在Nobu Malibu，与名人共度梦幻时光](/articles/nyt/1046661.md)
+
 6-30 [“红海”正在淹没香港](/articles/nyt/1046662.md)
 
 6-30 [“消瘦”的金正恩：减肥还是健康堪忧？](/articles/nyt/1046663.md)
@@ -598,6 +600,4 @@
 4-15 [美国气候特使克里访华，彰显白宫寻求合作意图](/articles/nyt/1046959.md)
 
 4-15 [史上最大庞氏骗局主谋麦道夫逝世](/articles/nyt/1046960.md)
-
-4-15 [黑龙江女公务员不堪上司骚扰，用拖把殴打回击](/articles/nyt/1046961.md)
 
