--- a/lists/德国之声.md
+++ b/lists/德国之声.md
@@ -1,6 +1,10 @@
 德国之声
 ------
 
+6-30 [德国撤离最后一批驻扎阿富汗官兵](/articles/dw/1041656.md)
+
+6-30 [评论：输出民主 梦断阿富汗](/articles/dw/1041657.md)
+
 6-30 [台美重启贸易谈判 BTA成焦点](/articles/dw/1041658.md)
 
 6-30 [印尼：共产党与「930事件」为何仍是禁忌话题？](/articles/dw/1041659.md)
@@ -596,8 +600,4 @@
 6-14 [湖北气爆12死逾百伤 习近平令查「保党庆气氛」](/articles/dw/1041954.md)
 
 6-14 [美藉G7重返世界舞台 各国领袖乐观其成](/articles/dw/1041955.md)
-
-6-13 [七国集团峰会闭幕 声明猛批中国](/articles/dw/1041956.md)
-
-6-13 [香港中联办：结束一党专政会威胁香港繁荣](/articles/dw/1041957.md)
 
