--- a/lists/路透.md
+++ b/lists/路透.md
@@ -1,6 +1,14 @@
 路透
 ------
 
+6-30 [“缺芯”致中国汽车制造业生产连两个月收缩，乘联会料7月芯片供给明显改善](/articles/reuters/1036291.md)
+
+6-30 [雷诺汽车公布发展计划，提升在电动汽车领域实力](/articles/reuters/1036292.md)
+
+6-30 [OPEC+委员会警告2022年4月后油市有失衡风险--报告](/articles/reuters/1036293.md)
+
+6-30 [人民币缩量收跌至近一周新低 6月贬幅1.56%创近两年来最大](/articles/reuters/1036294.md)
+
 6-30 [中国股市收涨 主要科技股指数创一年来最大季度涨幅](/articles/reuters/1036295.md)
 
 6-30 [拜登将提名学者古特曼担任美国驻德国大使--消息人士](/articles/reuters/1036296.md)
@@ -592,12 +600,4 @@
 6-23 [中储粮周五将拍卖1.8万吨乌克兰进口玉米 为本月第三次](/articles/reuters/1036589.md)
 
 6-23 [瑞典法院做出裁决 维持将华为排除在5G设备供应商之外的禁令](/articles/reuters/1036590.md)
-
-6-23 [独家：美国设立5亿美元基金赔偿波音737MAX两起空难乘客家属](/articles/reuters/1036591.md)
-
-6-23 [摩根士丹利将禁止未接种疫苗的员工和客户进入纽约办公室--消息人士](/articles/reuters/1036592.md)
-
-6-23 [焦点：美联储开出健康证明 银行业可以放心大胆地派息和回购股票](/articles/reuters/1036593.md)
-
-6-23 [世界银行同意调高气候变化支出比例 并向董事会提供年度进度报告](/articles/reuters/1036594.md)
 
