--- a/lists/纽约时报.md
+++ b/lists/纽约时报.md
@@ -1,6 +1,8 @@
 纽约时报
 ------
 
+6-30 [港中大教授周保松：只要坚持抗争，香港的历史就不会结束](/articles/nyt/1046660.md)
+
 6-30 [在Nobu Malibu，与名人共度梦幻时光](/articles/nyt/1046661.md)
 
 6-30 [“红海”正在淹没香港](/articles/nyt/1046662.md)
@@ -598,6 +600,4 @@
 4-15 [我在阿富汗打过仗，我仍然不知道这是否值得](/articles/nyt/1046958.md)
 
 4-15 [美国气候特使克里访华，彰显白宫寻求合作意图](/articles/nyt/1046959.md)
-
-4-15 [史上最大庞氏骗局主谋麦道夫逝世](/articles/nyt/1046960.md)
 
