--- a/lists/中国数字时代.md
+++ b/lists/中国数字时代.md
@@ -3,6 +3,8 @@
 
 5-6 [Photo: Untitled (Shanghai), by Hsiuan Boyen](/articles/cdt/0.md)
 
+6-30 [【麻辣总局】香港的言论自由已不如习上台之前](/articles/cdt/380883.md)
+
 6-30 [【图说天朝】这几天的各大网站首页是这样](/articles/cdt/380898.md)
 
 6-30 [知识分子｜公鼠怀孕实验引发伦理争议，论文作者称已申请撤稿](/articles/cdt/380900.md)
@@ -598,6 +600,4 @@
 5-24 [【404文库】中科大教授阮耀钟对“钱学森之问”的回答：教育必须去政治化！](/articles/cdt/382276.md)
 
 5-24 [【CDT周报】第十八期：“为波兰的罪过感到羞耻的人，才是真正的波兰人”](/articles/cdt/382278.md)
-
-5-24 [【CDT敏感词周报】第二十五期：袁隆平、长宁老奶奶](/articles/cdt/382286.md)
 
