--- a/lists/法广.md
+++ b/lists/法广.md
@@ -1,6 +1,14 @@
 法广
 ------
 
+6-30 [黎巴待出售新的建住房越来越稀少 - 今日经济](/articles/rfi/1027083.md)
+
+6-30 [道奇王牌投手鲍尔遭控攻击女子 警启动刑事调查 – 法国国际广播电台 - RFI](/articles/rfi/1027084.md)
+
+6-30 [全球8成新建燃煤电厂都在亚洲5国 违抗暖化目标 – 法国国际广播电台 - RFI](/articles/rfi/1027085.md)
+
+6-30 [哥伦比亚军方查获6吨古柯硷 – 法国国际广播电台 - RFI](/articles/rfi/1027086.md)
+
 6-30 [欧洲考古日，明星高卢人 - 文化遗产](/articles/rfi/1027087.md)
 
 6-30 [美商务部长：台积电总裁请求美协助取得疫苗「希望成为好伙伴」](/articles/rfi/1027088.md)
@@ -592,12 +600,4 @@
 6-25 [日本宣布追加捐赠台湾100万剂AZ疫苗](/articles/rfi/1027381.md)
 
 6-25 [美国达成基建协议 亚股红通通 – 法国国际广播电台 - RFI](/articles/rfi/1027382.md)
-
-6-25 [全球逾1亿7993万人确诊 至少390万人丧生 – 法国国际广播电台 - RFI](/articles/rfi/1027383.md)
-
-6-25 [中国封杀台山核电站燃料棒破损信息 - 法国报纸摘要](/articles/rfi/1027384.md)
-
-6-25 [台湾陆委会不许驻港办成为一中突破口 - 台北一周](/articles/rfi/1027385.md)
-
-6-25 [Delta变异病毒肆虐 斐济首度承认社区传播普遍 – 法国国际广播电台 - RFI](/articles/rfi/1027386.md)
 
