--- a/lists/自由亚洲电台.md
+++ b/lists/自由亚洲电台.md
@@ -1,6 +1,8 @@
 自由亚洲电台
 ------
 
+6-30 [睽违5年 台美重启TIFA谈判 台湾争取签署贸易协定](/articles/rfa/1045188.md)
+
 6-30 [【国安法一周年（下）】 我们 被时代拆散](/articles/rfa/1045189.md)
 
 6-30 [中共对台操作疫情认知战 分化台湾也做大内宣](/articles/rfa/1045190.md)
@@ -598,6 +600,4 @@
 5-27 [中国消极接收被遣返者    美国实施签证制裁](/articles/rfa/1045486.md)
 
 5-27 [俄中战略安全磋商   西方孤立下的实用性联盟](/articles/rfa/1045487.md)
-
-5-27 [抵制北京奥运  加拿大多个组织发起请愿签名活动](/articles/rfa/1045488.md)
 
