--- a/lists/德国之声.md
+++ b/lists/德国之声.md
@@ -1,6 +1,12 @@
 德国之声
 ------
 
+6-30 [支联会副主席邹幸彤保释遭撤销 重新被捕](/articles/dw/1041651.md)
+
+6-30 [中共中央党校前教授：中美价值观对立 对抗难以避免](/articles/dw/1041652.md)
+
+6-30 [中国制造业PMI高于荣枯线 经济或继续增长](/articles/dw/1041653.md)
+
 6-30 [德国一周大小事](/articles/dw/1041654.md)
 
 6-30 [风波再起：德国绿党候选人被指涉嫌抄袭](/articles/dw/1041655.md)
@@ -594,10 +600,4 @@
 6-14 [美媒：台山核电厂法国合资伙伴曾致函美国求救](/articles/dw/1041949.md)
 
 6-14 [德国人也爱“躺平”：不求发财还仇富？](/articles/dw/1041950.md)
-
-6-14 [客座评论：习近平无意降低同美对抗程度](/articles/dw/1041951.md)
-
-6-14 [内塔尼亚胡倒台 以色列新总理贝内特是谁？](/articles/dw/1041952.md)
-
-6-14 [北约秘书长：应制定共同政策抗衡中国](/articles/dw/1041953.md)
 
