--- a/lists/美国之音.md
+++ b/lists/美国之音.md
@@ -1,6 +1,10 @@
 美国之音
 ------
 
+6-30 [国安法一年改变香港模样：黎智英媒体帝国与香港自治体制一起坍塌](/articles/voa/1039798.md)
+
+6-30 [美台重启TIFA咨商，台盼与美签自贸协定](/articles/voa/1039799.md)
+
 6-30 [中共100年：学者谈“毛病养成恶习”与中共的前途](/articles/voa/1039800.md)
 
 6-30 [大赦国际：国安法在香港造成人权紧急状态](/articles/voa/1039801.md)
@@ -596,8 +600,4 @@
 6-17 [POLITICO独家报道：五角大楼拟组建海军特遣舰队压制中国军事扩张](/articles/voa/1040096.md)
 
 6-17 [拜登和普京开始首脑会谈 白宫称不会取得大把成果](/articles/voa/1040097.md)
-
-6-17 [防敏感技术输往中国，10位国会参议员吁美商务部速列清单](/articles/voa/1040098.md)
-
-6-16 [中国承认台山核电厂燃料棒破损 但否认辐射泄漏](/articles/voa/1040099.md)
 
