--- a/lists/德国之声.md
+++ b/lists/德国之声.md
@@ -1,6 +1,10 @@
 德国之声
 ------
 
+6-30 [人权观察： 在澳中国学生、学者忧受北京监控](/articles/dw/1041649.md)
+
+6-30 [德语媒体：中国共产党已为竞争做好了准备](/articles/dw/1041650.md)
+
 6-30 [支联会副主席邹幸彤保释遭撤销 重新被捕](/articles/dw/1041651.md)
 
 6-30 [中共中央党校前教授：中美价值观对立 对抗难以避免](/articles/dw/1041652.md)
@@ -596,8 +600,4 @@
 6-14 [G7峰会：聚焦气候、疫情与中国](/articles/dw/1041947.md)
 
 6-14 [客座评论：中国大学是在选媳妇，还是找保姆？](/articles/dw/1041948.md)
-
-6-14 [美媒：台山核电厂法国合资伙伴曾致函美国求救](/articles/dw/1041949.md)
-
-6-14 [德国人也爱“躺平”：不求发财还仇富？](/articles/dw/1041950.md)
 
