--- a/lists/法广.md
+++ b/lists/法广.md
@@ -1,6 +1,18 @@
 法广
 ------
 
+6-30 [韩国执政党完成总统大选党内候选人登记 9人参加角逐](/articles/rfi/1027074.md)
+
+6-30 [独裁和专制国家非常注重庆典——统治者的庆典 - 要闻解说](/articles/rfi/1027075.md)
+
+6-30 [中共百年党庆在天安门举行 习近平将隆重登场](/articles/rfi/1027076.md)
+
+6-30 [彗星撞地球造成灭绝前 恐龙已出现衰退 – 法国国际广播电台 - RFI](/articles/rfi/1027077.md)
+
+6-30 [俄罗斯疫苗接种缓慢 总统蒲亭反对强制施打 – 法国国际广播电台 - RFI](/articles/rfi/1027078.md)
+
+6-30 [Delta病毒肆虐 俄罗斯单日死亡连两天创新高 – 法国国际广播电台 - RFI](/articles/rfi/1027079.md)
+
 6-30 [国际特赦:国安法使香港走向警察国家 人权状况堪忧](/articles/rfi/1027080.md)
 
 6-30 [日本天皇是否支持东京奥运会？ - 东京专栏](/articles/rfi/1027081.md)
@@ -588,16 +600,4 @@
 6-25 [耐吉财测亮眼 美股标普开盘再创新高 – 法国国际广播电台 - RFI](/articles/rfi/1027372.md)
 
 6-25 [他们为什么要加入中国共产党？](/articles/rfi/1027373.md)
-
-6-25 [两大城2500人接种假疫苗 印度警方调查 – 法国国际广播电台 - RFI](/articles/rfi/1027374.md)
-
-6-25 [美非裔男佛洛伊德雕像被毁 涂上右翼团体名称 – 法国国际广播电台 - RFI](/articles/rfi/1027375.md)
-
-6-25 [美国佛州大楼坍塌  已知4死159人下落不明 – 法国国际广播电台 - RFI](/articles/rfi/1027376.md)
-
-6-25 [欧盟峰会：排除举办欧俄峰会可能 匈牙利争议立法犯众怒 - 要闻解说](/articles/rfi/1027377.md)
-
-6-25 [美国会减轻禁运制裁？古巴人寄希望于拜登](/articles/rfi/1027378.md)
-
-6-25 [非洲第3波疫情来势汹汹 疫苗接种跟不上全球 – 法国国际广播电台 - RFI](/articles/rfi/1027379.md)
 
