--- a/lists/美国之音.md
+++ b/lists/美国之音.md
@@ -1,6 +1,8 @@
 美国之音
 ------
 
+6-30 [七一游行遭禁 香港保安局警告市民勿参与未经批准集结](/articles/voa/1039797.md)
+
 6-30 [国安法一年改变香港模样：黎智英媒体帝国与香港自治体制一起坍塌](/articles/voa/1039798.md)
 
 6-30 [美台重启TIFA咨商，台盼与美签自贸协定](/articles/voa/1039799.md)
@@ -598,6 +600,4 @@
 6-17 [澳门步香港后尘 停止驻台经济办事处运作](/articles/voa/1040095.md)
 
 6-17 [POLITICO独家报道：五角大楼拟组建海军特遣舰队压制中国军事扩张](/articles/voa/1040096.md)
-
-6-17 [拜登和普京开始首脑会谈 白宫称不会取得大把成果](/articles/voa/1040097.md)
 
