--- a/lists/自由亚洲电台.md
+++ b/lists/自由亚洲电台.md
@@ -1,6 +1,14 @@
 自由亚洲电台
 ------
 
+7-1 [中共监控魔爪延伸全球   澳大利亚学府成重灾区](/articles/rfa/1045184.md)
+
+7-1 [中共党员向一亿迈进  学者 : 入党主要为私利](/articles/rfa/1045185.md)
+
+6-30 [参议员发表挺中言论   加拿大华人批他连累华人遭歧视](/articles/rfa/1045186.md)
+
+6-30 [藏人控诉布达拉宫禁转经 挂党庆横幅亵渎圣殿](/articles/rfa/1045187.md)
+
 6-30 [睽违5年 台美重启TIFA谈判 台湾争取签署贸易协定](/articles/rfa/1045188.md)
 
 6-30 [【国安法一周年（下）】 我们 被时代拆散](/articles/rfa/1045189.md)
@@ -592,12 +600,4 @@
 5-27 [杨恒均涉间谍案择日宣判 澳驻华大使被拒绝旁听](/articles/rfa/1045482.md)
 
 5-27 [刘鹤与戴琪首次通话   仅认同贸易重要性未处理分歧](/articles/rfa/1045483.md)
-
-5-27 [坎贝尔：美中关系“接触”时代已经结束](/articles/rfa/1045484.md)
-
-5-27 [病毒从哪来？拜登下令情报界九十天内提交新报告](/articles/rfa/1045485.md)
-
-5-27 [中国消极接收被遣返者    美国实施签证制裁](/articles/rfa/1045486.md)
-
-5-27 [俄中战略安全磋商   西方孤立下的实用性联盟](/articles/rfa/1045487.md)
 
