--- a/lists/美国之音.md
+++ b/lists/美国之音.md
@@ -1,6 +1,8 @@
 美国之音
 ------
 
+7-1 [17国民调显示对中国的观感普遍很差，对习近平信心则接近谷底](/articles/voa/1039793.md)
+
 7-1 [印度首艘国产航母进入测试 中媒发文讽刺](/articles/voa/1039794.md)
 
 7-1 [佛州楼房坍塌已确认16人死亡 搜救工作持续](/articles/voa/1039795.md)
@@ -598,6 +600,4 @@
 6-17 [国会议员要求政府依法打击中国在美国大学的影响力](/articles/voa/1040091.md)
 
 6-17 [欧盟建议成员国取消对美旅游限制](/articles/voa/1040092.md)
-
-6-17 [匈牙利议会批准为引发争议的中国大学校园捐赠土地](/articles/voa/1040093.md)
 
