--- a/lists/中国数字时代.md
+++ b/lists/中国数字时代.md
@@ -3,6 +3,10 @@
 
 5-6 [Photo: Untitled (Shanghai), by Hsiuan Boyen](/articles/cdt/0.md)
 
+7-1 [天眼视点 | 为何一些疫苗高接种率国家新增病例和死亡创记录](/articles/cdt/380869.md)
+
+7-1 [青年骑手之家 | 外卖骑手的诗 | 相遇](/articles/cdt/380871.md)
+
 6-30 [Matters｜乌合麒麟们的真理：科学性没有、政治性极强](/articles/cdt/380877.md)
 
 6-30 [【麻辣总局】香港的言论自由已不如习上台之前](/articles/cdt/380883.md)
@@ -596,8 +600,4 @@
 5-24 [每日人物｜白银越野赛，无人能到终点](/articles/cdt/382267.md)
 
 5-24 [中产生活观察｜作为符号的袁隆平](/articles/cdt/382269.md)
-
-5-24 [谷雨实验室｜无声的跑者消失在狂暴的风雨中](/articles/cdt/382273.md)
-
-5-24 [【404文库】中科大教授阮耀钟对“钱学森之问”的回答：教育必须去政治化！](/articles/cdt/382276.md)
 
