--- a/lists/美国之音.md
+++ b/lists/美国之音.md
@@ -1,6 +1,8 @@
 美国之音
 ------
 
+7-1 [一百多个国际团体抗议美国对无人机的使用](/articles/voa/1039788.md)
+
 7-1 [出口疲软之际，中国制造业6月份走软](/articles/voa/1039789.md)
 
 7-1 [美国最近几次灾难凸显人们需对未来做新思考](/articles/voa/1039790.md)
@@ -598,6 +600,4 @@
 6-17 [比起特朗普，拜登的对华政策让中国更不舒服](/articles/voa/1040086.md)
 
 6-17 [拜登政府寻求中方批准波音737MAX飞机复飞](/articles/voa/1040087.md)
-
-6-17 [普京称与拜登的峰会是“建设性的”](/articles/voa/1040088.md)
 
