--- a/lists/自由亚洲电台.md
+++ b/lists/自由亚洲电台.md
@@ -1,6 +1,8 @@
 自由亚洲电台
 ------
 
+7-1 [香港邹幸彤再次被捕   报告说香港人权状况迅速恶化](/articles/rfa/1045179.md)
+
 7-1 [百年老党仍少年？中国年轻人眼中的“老大哥”](/articles/rfa/1045180.md)
 
 7-1 [中共建党百年前严控藏地 比如县数名藏人被捕](/articles/rfa/1045181.md)
@@ -598,6 +600,4 @@
 5-28 [边巴次仁就任西藏流亡政府领袖 盼促成达赖喇嘛访中](/articles/rfa/1045477.md)
 
 5-27 [台湾频改染疫数字挨批   大陆人：中国的数字真相呢？](/articles/rfa/1045478.md)
-
-5-27 [广、深两地新增本地感染   疫苗接种站人山人海](/articles/rfa/1045479.md)
 
