--- a/lists/德国之声.md
+++ b/lists/德国之声.md
@@ -1,6 +1,8 @@
 德国之声
 ------
 
+7-1 [香港陷人权危机?　北京引经济数据反驳](/articles/dw/1041642.md)
+
 7-1 [中共百年党庆 北京香港气氛迥异](/articles/dw/1041643.md)
 
 6-30 [前党校教授：中美价值观对立 对抗难以避免](/articles/dw/1041644.md)
@@ -598,6 +600,4 @@
 6-15 [分析报告：德国无人机防御能力严重不足](/articles/dw/1041940.md)
 
 6-15 [全球范围童工现象再度蔓延](/articles/dw/1041941.md)
-
-6-15 [专访：欧美在贸易政策上无法一致对中](/articles/dw/1041942.md)
 
