--- a/lists/路透.md
+++ b/lists/路透.md
@@ -1,6 +1,10 @@
 路透
 ------
 
+7-1 [财新中国6月制造业PMI降至51.3为三个月低位 产出和新订单增速放缓](/articles/reuters/1036258.md)
+
+7-1 [亚马逊提出申诉，要求FTC新任主席回避对该公司的反垄断调查](/articles/reuters/1036259.md)
+
 7-1 [图表新闻：中国6月地方债规模略降利率打破指导下限 三季度将迎发行高峰](/articles/reuters/1036260.md)
 
 7-1 [中国6月债券通日均交易量创历史新高 国债及政策性金融债占比超八成](/articles/reuters/1036261.md)
@@ -596,8 +600,4 @@
 6-24 [特斯拉提振美股纳指创纪录收盘新高 标普500指数下跌](/articles/reuters/1036556.md)
 
 6-24 [油价升至逾两年高位 受助于美国库存骤降](/articles/reuters/1036557.md)
-
-6-24 [金价攀升 鲍威尔安抚性讲话缓解升息担忧](/articles/reuters/1036558.md)
-
-6-23 [中国国家邮政局约谈德邦物流 因违法收寄危险违禁物品](/articles/reuters/1036559.md)
 
