--- a/lists/纽约时报.md
+++ b/lists/纽约时报.md
@@ -1,6 +1,8 @@
 纽约时报
 ------
 
+7-1 [滴滴赴美上市，增长和监管隐忧犹存](/articles/nyt/1046657.md)
+
 7-1 [中国被世卫组织认证为无疟疾国家](/articles/nyt/1046658.md)
 
 7-1 [直播：中共庆祝建党百年，习近平将发表讲话](/articles/nyt/1046659.md)
@@ -598,6 +600,4 @@
 4-16 [中国一季度GDP增18.3%，消费者仍捂紧钱包](/articles/nyt/1046955.md)
 
 4-16 [日本会对抗中国吗？菅义伟访美或将传递信号](/articles/nyt/1046956.md)
-
-4-16 [从香港、东非到加州：我家的全球疫苗接种故事](/articles/nyt/1046957.md)
 
