--- a/lists/法广.md
+++ b/lists/法广.md
@@ -1,6 +1,10 @@
 法广
 ------
 
+7-1 [天才老爹性侵案大逆转 比尔寇斯比获释 – 法国国际广播电台 - RFI](/articles/rfi/1027050.md)
+
+7-1 [NBA太阳击败快艇 打进总冠军赛 – 法国国际广播电台 - RFI](/articles/rfi/1027051.md)
+
 7-1 [中共党庆 江朱缺席 胡温现身](/articles/rfi/1027052.md)
 
 7-1 [默克尔被指在中俄问题上误判](/articles/rfi/1027053.md)
@@ -596,8 +600,4 @@
 6-26 [澳大利亚柯林斯号潜艇停泊凯恩斯因应南海局势](/articles/rfi/1027348.md)
 
 6-26 [新冠病毒来源论 权威柳叶刀是否变成谄媚北京《有用白痴》 法媒提问 - 中华世界](/articles/rfi/1027349.md)
-
-6-26 [以色列和中国的人类物种新发现引质疑：古生物学也有冷战？](/articles/rfi/1027350.md)
-
-6-26 [弗洛伊德案： 涉事前警察肖万被判22年6个月刑期](/articles/rfi/1027351.md)
 
