--- a/lists/美国之音.md
+++ b/lists/美国之音.md
@@ -1,6 +1,8 @@
 美国之音
 ------
 
+7-1 [香港人在高压下度过“回归”纪念日](/articles/voa/1039782.md)
+
 7-1 [美众议院对1月6日袭击国会山事件展开调查](/articles/voa/1039783.md)
 
 7-1 [联合国秘书长敦促美国解除对伊朗的制裁](/articles/voa/1039784.md)
@@ -598,6 +600,4 @@
 6-17 [指有效率太低 哥斯达黎加决定暂不接收中国科兴疫苗](/articles/voa/1040080.md)
 
 6-17 [首次与中国防长在同一场合出现 美防长直言中国在南中国海违法](/articles/voa/1040081.md)
-
-6-17 [与普京会晤后 拜登语气现实](/articles/voa/1040082.md)
 
