--- a/lists/德国之声.md
+++ b/lists/德国之声.md
@@ -1,6 +1,10 @@
 德国之声
 ------
 
+7-1 [习近平谈“解决台湾问题“——台海战争的悬顶之剑](/articles/dw/1041633.md)
+
+7-1 [索尼中国营销翻车变“崴泥”](/articles/dw/1041634.md)
+
 7-1 [白俄罗斯关闭歌德学院](/articles/dw/1041635.md)
 
 7-1 [无限期封城陷困境   马来西亚人挂白旗丶穿黑衣](/articles/dw/1041636.md)
@@ -596,8 +600,4 @@
 6-16 [棒棒糖测试！德国为儿童研发新冠检测方法](/articles/dw/1041931.md)
 
 6-15 [专访：欧美在贸易政策上难以一致对中](/articles/dw/1041932.md)
-
-6-15 [中国威胁仍在  「菲美军队互访协定」三度延後终止](/articles/dw/1041933.md)
-
-6-15 [联合国专家称中国强摘被关押人器官 北京驳斥](/articles/dw/1041934.md)
 
