--- a/lists/法广.md
+++ b/lists/法广.md
@@ -1,6 +1,12 @@
 法广
 ------
 
+7-1 [日本官房长官：希望中国负起大国责任](/articles/rfi/1027029.md)
+
+7-1 [黎市府拟挹注5940万欧元恢复埃菲尔铁塔魅力吸引观光客 - 法国风光](/articles/rfi/1027030.md)
+
+7-1 [下订疫苗却拿不到货  瓜地马拉要俄罗斯退钱 – 法国国际广播电台 - RFI](/articles/rfi/1027031.md)
+
 7-1 [经济情况乐观 欧股开涨 – 法国国际广播电台 - RFI](/articles/rfi/1027032.md)
 
 7-1 [曾主导伊拉克战争的美国前鹰派防长拉姆斯菲尔德去世](/articles/rfi/1027033.md)
@@ -594,10 +600,4 @@
 6-26 [办欧国杯赛事  圣彼得堡新增染疫死创俄国最高 – 法国国际广播电台 - RFI](/articles/rfi/1027327.md)
 
 6-26 [Delta变种病毒猖獗 孟加拉下周实施严格封城 – 法国国际广播电台 - RFI](/articles/rfi/1027328.md)
-
-6-26 [哥伦比亚总统乘直升飞机遭枪击 定性恐怖袭击](/articles/rfi/1027329.md)
-
-6-26 [香港3团体申请7.1游行 今与警方讨论结果未知](/articles/rfi/1027330.md)
-
-6-26 [雪梨Delta变种病毒激增 6/26起封城两周 – 法国国际广播电台 - RFI](/articles/rfi/1027331.md)
 
