--- a/lists/美国之音.md
+++ b/lists/美国之音.md
@@ -1,6 +1,10 @@
 美国之音
 ------
 
+7-1 [习近平：中国绝不允许外来势力欺负压迫奴役中国人民](/articles/voa/1039776.md)
+
+7-1 [国安法实施一年 香港经历巨变 民主进程举步维艰](/articles/voa/1039777.md)
+
 7-1 [德国防长访美 承诺在印太安全问题上加强合作](/articles/voa/1039778.md)
 
 7-1 [习近平称解决台湾问题是中共矢志不渝的历史任务](/articles/voa/1039779.md)
@@ -596,8 +600,4 @@
 6-17 [港警大动作搜查苹果日报总部激起各方抨击](/articles/voa/1040074.md)
 
 6-17 [美台签署多管火箭和鱼叉导弹两项军购合约 提升台湾不对称战力](/articles/voa/1040075.md)
-
-6-17 [美国资深媒体人刘子祥谈中共与全球化、中国文化与烹调](/articles/voa/1040076.md)
-
-6-17 [国会两党议员拟提支持台湾法案](/articles/voa/1040077.md)
 
