--- a/lists/美国之音.md
+++ b/lists/美国之音.md
@@ -1,6 +1,8 @@
 美国之音
 ------
 
+7-1 [中共建党百年之际，深受疫情困扰的金正恩向习近平致贺电](/articles/voa/1039775.md)
+
 7-1 [习近平：中国绝不允许外来势力欺负压迫奴役中国人民](/articles/voa/1039776.md)
 
 7-1 [国安法实施一年 香港经历巨变 民主进程举步维艰](/articles/voa/1039777.md)
@@ -598,6 +600,4 @@
 6-17 [印尼中爪哇350多医疗人员接种科兴疫苗后仍感染病毒](/articles/voa/1040073.md)
 
 6-17 [港警大动作搜查苹果日报总部激起各方抨击](/articles/voa/1040074.md)
-
-6-17 [美台签署多管火箭和鱼叉导弹两项军购合约 提升台湾不对称战力](/articles/voa/1040075.md)
 
