--- a/lists/自由亚洲电台.md
+++ b/lists/自由亚洲电台.md
@@ -1,6 +1,8 @@
 自由亚洲电台
 ------
 
+7-1 [百年党庆下的香港   异议声被禁绝](/articles/rfa/1045174.md)
+
 7-1 [中共百年党庆 凸显强烈民族主义政党信号](/articles/rfa/1045175.md)
 
 7-1 [习近平谈台湾 首次对外发话警告勿低估其决心和能力](/articles/rfa/1045176.md)
@@ -598,6 +600,4 @@
 5-28 [四十六名武汉访民联署  控诉黑监狱如同“纳粹集中营”](/articles/rfa/1045472.md)
 
 5-28 [大午案庭前会议结束  孙大午痛哭愿承担一切罪责](/articles/rfa/1045473.md)
-
-5-28 [异议青年王靖渝迪拜获释   美国关注中国人权](/articles/rfa/1045474.md)
 
