--- a/lists/自由亚洲电台.md
+++ b/lists/自由亚洲电台.md
@@ -1,6 +1,10 @@
 自由亚洲电台
 ------
 
+7-1 [习近平党庆避谈西藏、新疆   学者：心虚家丑不敢提](/articles/rfa/1045172.md)
+
+7-1 [消息人士：台湾智库国策院与对岸中办、联参有沟通管道](/articles/rfa/1045173.md)
+
 7-1 [百年党庆下的香港   异议声被禁绝](/articles/rfa/1045174.md)
 
 7-1 [中共百年党庆 凸显强烈民族主义政党信号](/articles/rfa/1045175.md)
@@ -596,8 +600,4 @@
 5-28 [12所大学增设“未来技术学院”   学者批缺乏学术自由注定失败](/articles/rfa/1045470.md)
 
 5-28 [国药疫苗效力逾七成  美国会两议案针对武毒所](/articles/rfa/1045471.md)
-
-5-28 [四十六名武汉访民联署  控诉黑监狱如同“纳粹集中营”](/articles/rfa/1045472.md)
-
-5-28 [大午案庭前会议结束  孙大午痛哭愿承担一切罪责](/articles/rfa/1045473.md)
 
