--- a/lists/美国之音.md
+++ b/lists/美国之音.md
@@ -1,6 +1,10 @@
 美国之音
 ------
 
+7-2 [魏京生：习近平想当伟大领袖，但没有真材实料](/articles/voa/1039770.md)
+
+7-2 [香港警方7-1动员1万警力封锁铜锣湾 民主派团体坚持游行摆街站发声](/articles/voa/1039771.md)
+
 7-2 [美国国会及行政当局中国委员会主席致信联合国秘书长，要求对中国严重侵犯人权行为采取行动](/articles/voa/1039772.md)
 
 7-2 [美日加强军演以防备中国夺取台湾](/articles/voa/1039773.md)
@@ -596,8 +600,4 @@
 6-18 [中国制裁在联邦议会提出“警告新疆种族灭绝”议案的比利时议员](/articles/voa/1040068.md)
 
 6-18 [不想依赖北京 普京更愿意在大国间周旋，日内瓦峰会让俄满意](/articles/voa/1040069.md)
-
-6-18 [奥运临近，东京都等九地解除疫情紧急状态](/articles/voa/1040070.md)
-
-6-17 [港府拟继续清算泛民议员 下月或有近两百人被取消资格](/articles/voa/1040071.md)
 
